--- a/rush.yaml
+++ b/rush.yaml
@@ -43550,7 +43550,7 @@ yugipedia_page_id: 826346
 ---
 konami_id: 16906
 name:
-  en: Superstrike Dragon Dragiastar F
+  en: Hyperstrike Dragon Dragiastar F
   de:
   es:
   fr:
@@ -43601,7 +43601,7 @@ atk: 3000
 def: 2000
 materials:
   en: |-
-    "Multistrike Dragon Dragias" + "The☆Dragon"
+    "Multistrike Dragon Dragias" + "The Dragon"
   de:
   es:
   fr:
@@ -43617,7 +43617,7 @@ series:
 - Strike Dragon
 images:
 - index: 1
-  image: SuperstrikeDragonDragiastarF-RDEXT1-JP-UR.png
+  image: HyperstrikeDragonDragiastarF-RDEXT1-JP-UR.png
 sets:
   ja:
   - set_number: RD/EXT1-JP022
@@ -43643,7 +43643,7 @@ yugipedia_page_id: 826350
 ---
 konami_id: 16907
 name:
-  en: Full Moon Dragon Umbrlancer F
+  en: Full Moon Dragon Umbralancer F
   de:
   es:
   fr:
@@ -43708,7 +43708,7 @@ materials:
   zh-CN:
 images:
 - index: 1
-  image: FullMoonDragonUmbrlancerF-RDEXT1-JP-SR.png
+  image: FullMoonDragonUmbralancerF-RDEXT1-JP-SR.png
 sets:
   ja:
   - set_number: RD/EXT1-JP023
@@ -43804,7 +43804,7 @@ yugipedia_page_id: 826198
 ---
 konami_id: 16909
 name:
-  en: The☆Wyvern
+  en: The Wyvern
   de:
   es:
   fr:
@@ -43851,7 +43851,7 @@ level: 5
 atk: 500
 def: 1500
 series:
-- The☆
+- The
 images:
 - index: 1
   image: TheWyvern-RDEXT1-JP-SR.png
@@ -43870,7 +43870,7 @@ yugipedia_page_id: 828233
 ---
 konami_id: 16910
 name:
-  en: The☆Dragon
+  en: The Dragon
   de:
   es:
   fr:
@@ -43903,7 +43903,7 @@ level: 1
 atk: 0
 def: 0
 series:
-- The☆
+- The
 images:
 - index: 1
   image: TheDragon-RDGRC1-JP-SR.png
@@ -43926,7 +43926,7 @@ yugipedia_page_id: 826347
 ---
 konami_id: 16911
 name:
-  en: The☆Power-Up
+  en: The Power Up
   de:
   es:
   fr:
@@ -43969,7 +43969,7 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- The☆
+- The
 images:
 - index: 1
   image: ThePowerUp-RDEXT1-JP-C.png
@@ -43992,7 +43992,7 @@ yugipedia_page_id: 828952
 ---
 konami_id: 16912
 name:
-  en: The☆Barrier
+  en: The Barrier
   de:
   es:
   fr:
@@ -44035,7 +44035,7 @@ effect:
 card_type: Trap
 property: Normal
 series:
-- The☆
+- The
 images:
 - index: 1
   image: TheBarrier-RDEXT1-JP-C.png
@@ -45684,7 +45684,7 @@ yugipedia_page_id: 831597
 ---
 konami_id: 16951
 name:
-  en: The☆Star Dragon
+  en: The Star Dragon
   de:
   es:
   fr:
@@ -45731,7 +45731,7 @@ level: 7
 atk: 2500
 def: 1500
 series:
-- The☆
+- The
 images:
 - index: 1
   image: TheStarDragon-RDSJMP-JP-NPR.png
@@ -55269,7 +55269,7 @@ atk: 3000
 def: 2000
 materials:
   en: |-
-    "Illusion Strike Dragon Miragias" + "The☆Dragon"
+    "Illusion Strike Dragon Miragias" + "The Dragon"
   de:
   es:
   fr:
@@ -65013,7 +65013,7 @@ atk: 3000
 def: 2000
 materials:
   en: |-
-    "Steel Strike Dragon Metagias" + "The☆Dragon"
+    "Steel Strike Dragon Metagias" + "The Dragon"
   de:
   es:
   fr:
@@ -86065,7 +86065,7 @@ yugipedia_page_id: 918163
 ---
 konami_id:
 name:
-  en: The☆Dragias
+  en: The Dragias
   de:
   es:
   fr:
@@ -86079,7 +86079,7 @@ name:
   zh-CN:
 text:
   en: |-
-    A dragon that made seven supernovae go gamma-ray burst. Its name is... The☆Dragias! The☆Dragias!!
+    A dragon that made seven supernovae go gamma-ray burst. Its name is... The Dragias! The Dragias!!
   de:
   es:
   fr:
@@ -86097,7 +86097,7 @@ level: 7
 atk: 2500
 def: 1500
 series:
-- The☆
+- The
 images:
 - index: 1
   image: TheDragias-RDKP12-JP-OP.png
@@ -86676,7 +86676,7 @@ yugipedia_page_id: 921268
 ---
 konami_id:
 name:
-  en: The☆Copy
+  en: The Copy
   de:
   es:
   fr:
@@ -86715,7 +86715,7 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- The☆
+- The
 images:
 - index: 1
   image: TheCopy-RDKP12-JP-OP.png
@@ -87293,7 +87293,7 @@ yugipedia_page_id: 923449
 ---
 konami_id:
 name:
-  en: Back To The☆Fusion
+  en: Back To The Fusion
   de:
   es:
   fr:
@@ -87332,7 +87332,7 @@ effect:
 card_type: Spell
 property: Normal
 series:
-- The☆
+- The
 images:
 - index: 1
   image: BackToTheFusion-RDKP12-JP-OP.png
