--- a/data/cards/yugipedia921008.yaml
+++ b/data/cards/yugipedia921008.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>重<rt>じゅう</rt></ruby><ruby>武<rt>む</rt></ruby><ruby>者<rt>しゃ</rt></ruby>ドウ<ruby>Ｃ－Ｎ<rt>シン</rt></ruby>
-  ja_romaji: Chōjūmusha Dōshin
+  ja_romaji: Chōjūmusha Dou-Shin
   ko:
   ko_rr:
   zh-TW:
