--- a/data/cards/51405049.yaml
+++ b/data/cards/51405049.yaml
@@ -158,6 +158,10 @@ sets:
     set_name: Tournament Pack 2023 Vol.1
     rarities:
     - Super Rare
+  - set_number: 23TP-JP102
+    set_name: Top Prize Pack 2023 Vol.1
+    rarities:
+    - Super Parallel Rare
   ko:
   - set_number: REDU-KR062
     set_name: Return of the Duelist
