--- a/data/cards/71278040.yaml
+++ b/data/cards/71278040.yaml
@@ -129,6 +129,10 @@ sets:
     set_name: Tournament Pack 2023 Vol.1
     rarities:
     - Super Rare
+  - set_number: 23TP-JP101
+    set_name: Top Prize Pack 2023 Vol.1
+    rarities:
+    - Super Parallel Rare
   ko:
   - set_number: ETCO-KR001
     set_name: Eternity Code
