--- a/rush.yaml
+++ b/rush.yaml
@@ -88116,3 +88116,335 @@ sets:
     rarities:
     - Super Rare
 yugipedia_page_id: 928774
+---
+konami_id:
+name:
+  en: Green-Eyes Star Cat
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>緑眼の星猫<rt>グリーンアイズ・スターキャット</rt></ruby>
+  ja_romaji: Gurīn'aizu Sutākyatto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 Beast or Warrior Type monster with 200 DEF from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 1 card. Also, if you sent a Normal Monster to the Graveyard to meet the requirement, this face-up card can be treated as 2 Tributes for the Tribute Summon of a monster with 200 DEF in Attack Position this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Beast / Effect
+attribute: LIGHT
+level: 1
+atk: 400
+def: 200
+series:
+- Cat
+images:
+- index: 1
+  image: GreenEyesStarCat-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP015
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 928865
+---
+konami_id:
+name:
+  en: Purple-Eyes Star Cat
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>紫眼の星猫<rt>パープルアイズ・スターキャット</rt></ruby>
+  ja_romaji: Pāpuruaizu Sutākyatto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Set 1 "Stray Force" from your Graveyard in your Spell & Trap Zone. Then, you can choose 1 face-up Level 7 or higher monster with 200 DEF on your field. If you do, that monster can attack twice during this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Beast / Effect
+attribute: LIGHT
+level: 1
+atk: 400
+def: 200
+series:
+- Cat
+images:
+- index: 1
+  image: PurpleEyesStarCat-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP014
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 928867
+---
+konami_id:
+name:
+  en: Dark-Eyes Breakstar Cat
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>闇眼の破星猫<rt>ダークアイズ・ブレイスターキャット</rt></ruby>
+  ja_romaji: Dākuaizu Bureisutākyatto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top 2 cards of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    If this card attacks a Defense Position monster this turn, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Also, if you activated this effect during your Main Phase this card was Special Summoned, you can destroy 1 face-up Level 7 or 8 monster on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Beast / Effect
+attribute: DARK
+level: 7
+atk: 2200
+def: 200
+series:
+- Cat
+images:
+- index: 1
+  image: DarkEyesBreakstarCat-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP017
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Rare
+yugipedia_page_id: 928869
+---
+konami_id:
+name:
+  en: Meowonderful Rush
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ニャンダフル・ラッシュ
+  ja_romaji: Nyandafuru Rasshu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Place 1 card from your hand on the bottom of the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon up to 2 Beast and/or Warrior Type monsters with 200 DEF from your Graveyard to your field in face-up Defense Position. This turn, you can only attack with monsters with 200 DEF.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: MeowonderfulRush-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP049
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Rare
+yugipedia_page_id: 928870
+---
+konami_id:
+name:
+  en: Machvio of the Ultimate Aria
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>極<rt>ぎょく</rt></ruby><ruby>奏<rt>そう</rt></ruby>のマッハヴァイオ
+  ja_romaji: Gyokusō no Mahhavaio
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    This card gains ATK equal to [the total number of Equip Spell Cards equipped to this card and the number of face-up Normal Monsters on your opponent's field] x 500.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Psychic / Effect
+attribute: WIND
+level: 7
+atk: 2400
+def: 1400
+series:
+- Shaman Bandit
+images:
+- index: 1
+  image: MachviooftheUltimateAria-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP010
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Super Rare
+yugipedia_page_id: 928873
+---
+konami_id:
+name:
+  en: Stray Force
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>野<rt>や</rt></ruby><ruby>性<rt>せい</rt></ruby>なるバリア －ノラーフォース－
+  ja_romaji: Yaseinaru Baria - Norā Fōsu -
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's monster declares an attack.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The attacking monster loses 200 ATK until the end of this turn. Then, if you have 3 face-up Beast, Beast-Warrior, and/or Warrior Type monsters with 200 DEF on your field, you can destroy all Attack Position monsters on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: StrayForce-RDKP12-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP12-JP061
+    set_name: 'Deck Mod Pack: Double Star of the Assault!!'
+    rarities:
+    - Common
+yugipedia_page_id: 928885
