--- a/data/cards/yugipedia929194.yaml
+++ b/data/cards/yugipedia929194.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    This card's name becomes "Fallen of Albaz" while on the field or in the GY. If this card is Normal or Special Summoned: You can discard 1 card, then target 1 Dragon monster your opponent controls or in their GY to activate 1 of these effects.
+    This card's name becomes "Fallen of Albaz" while on the field or in the GY. If this card is Normal or Special Summoned: You can discard 1 card, then target 1 Dragon monster your opponent controls or in their GY to activate 1 of these effects;
     ● Send this card to the GY, and if you do, take control of that monster on the field until the End Phase.
     ● Send this card to the GY, and if you do, Special Summon that monster from the GY to your field.
     You can only use this effect of "The Bystial Aluber" once per turn.
