--- a/data/cards/yugipedia929196.yaml
+++ b/data/cards/yugipedia929196.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If there is a Level/Rank/Link-2 monster on the field, you can Special Summon this card (from your hand) to either field. You can only Special Summon "Fallen of Argyros" this way once per turn. Link Monsters that point to this card cannot activate their effects. During your opponent's turn (Quick Effect): You can target 1 Xyz Monster on the field; detach up to 2 materials from it.
+    If a Level/Rank/Link 2 monster is on the field, you can Special Summon this card (from your hand) to either field. You can only Special Summon "Fallen of Argyros" once per turn this way. Neither player can activate the effects of Link Monsters that point to this card. During your opponent's turn (Quick Effect): You can target 1 Xyz Monster on the field; detach up to 2 materials from it. You can only use this effect of "Fallen of Argyros" once per turn.
   de:
   es:
   fr:
