--- a/data/rush/15673.yaml
+++ b/data/rush/15673.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: <ruby>魔<rt>ま</rt></ruby><ruby>人<rt>じん</rt></ruby>の<ruby>熱<rt>ねっ</rt></ruby><ruby>風<rt>ぷう</rt></ruby>
   ja_romaji: Majin no Neppū
-  ko:
+  ko: 마인의 열풍
   ko_rr:
   zh-TW:
   zh-CN:
@@ -26,7 +26,8 @@ requirement:
   pt:
   ja: |-
     自分フィールドに表側表示モンスター（悪魔族）がいる場合に発動できる。
-  ko:
+  ko: |-
+    자신 필드에 앞면 표시 몬스터(악마족)가 있을 경우에 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
@@ -43,7 +44,8 @@ effect:
   pt:
   ja: |-
     相手フィールドの魔法・罠カード１枚を選んで持ち主の手札に戻す。
-  ko:
+  ko: |-
+    상대 필드의 마법 / 함정 카드 1장을 고르고 주인의 패로 되돌린다.
   zh-TW:
   zh-CN:
 card_type: Spell
