--- a/data/rush/15684.yaml
+++ b/data/rush/15684.yaml
@@ -8,7 +8,7 @@ name:
   pt:
   ja: エレキック・アンプル
   ja_romaji: Erekikku Anpuru
-  ko:
+  ko: 일렉킥 앰플
   ko_rr:
   zh-TW:
   zh-CN:
@@ -26,7 +26,8 @@ requirement:
   pt:
   ja: |-
     なし
-  ko:
+  ko: |-
+    없음
   zh-TW:
   zh-CN:
 effect:
@@ -43,7 +44,8 @@ effect:
   pt:
   ja: |-
     自分フィールドの表側表示の通常モンスター（レベル２以下／サイキック族）を２体まで選び、［選んだモンスターの攻撃力の合計］だけ自分のＬＰを回復する。
-  ko:
+  ko: |-
+    자신 필드의 앞면 표시 일반 몬스터(레벨 2 이하 / 사이킥족)를 2장까지 고르고, [고른 몬스터의 공격력의 합계]만큼 자신의 LP를 회복한다.
   zh-TW:
   zh-CN:
 card_type: Spell
