--- a/data/cards/yugipedia929198.yaml
+++ b/data/cards/yugipedia929198.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    This card's name becomes "Icejade Cenote Enion Cradle" while it is equipped with an Equip Card. You can discard 1 other "Icejade" card or WATER monster; Special Summon this card from your hand, then you can Special Summon 1 "Icejade Token" (Aqua/WATER/Level 3/ATK 0/DEF 0). While that Token is in the Monster Zone, the player who Summoned it cannot Special Summon monsters from the Extra Deck, except WATER monsters. You can only use this effect of "Icejade Aegirine Rahn" once per turn.
+    You can discard 1 other "Icejade" card or WATER monster; Special Summon this card from your hand, then you can Special Summon 1 "Icejade Token" (Aqua/WATER/Level 3/ATK 0/DEF 0). While that Token is in the Monster Zone, the player who Summoned it cannot Special Summon monsters from the Extra Deck, except WATER monsters. You can only use this effect of "Icejade Aegirine Rahn" once per turn. This card's name becomes "Icejade Cenote Enion Cradle" while it is equipped with an Equip Card.
   de:
   es:
   fr:
