--- a/data/cards/yugipedia929201.yaml
+++ b/data/cards/yugipedia929201.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as a "Dogmatika" and "Despia" card.)
-    If this card is Normal or Special Summoned: You can send 1 "Fallen of Albaz", or 1 card that mentions it, from your Deck to the GY. If a card(s) leaves the Extra Deck: You can target 1 "Fallen of Albaz", or 1 monster that mentions it except "Guiding Quem, the Virtuous", in your GY; Special Summon it. You can only use each effect of "Guiding Quem, the Virtuous" once per turn.
+    If this card is Normal or Special Summoned: You can send 1 "Fallen of Albaz", or 1 card that mentions it, from your Deck to the GY. If a card(s) leaves the Extra Deck: You can target 1 "Fallen of Albaz", or 1 monster that mentions it, in your GY, except "Guiding Quem, the Virtuous"; Special Summon it. You can only use each effect of "Guiding Quem, the Virtuous" once per turn.
   de:
   es:
   fr:
