--- a/data/cards/65734501.yaml
+++ b/data/cards/65734501.yaml
@@ -1,7 +1,7 @@
 konami_id: 17992
 password: 65734501
 name:
-  en: Rescue-ACE Air Hoister
+  en: Rescue-ACE Air Lifter
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 救援ACE队 空中起吊员
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can add 1 "Rescue-ACE" Spell from your Deck to your hand. When your opponent activates a monster effect on the field (Quick Effect): You can Tribute this card from your hand or field; Special Summon 1 "Rescue-ACE" monster from your hand, except "Rescue-ACE Air Hoister". You can only use each effect of "Rescue-ACE Air Hoister" once per turn.
+    If this card is Normal or Special Summoned: You can add 1 "Rescue-ACE" Spell from your Deck to your hand. When your opponent activates a monster effect on the field (Quick Effect): You can Tribute this card from your hand or face-up field; Special Summon 1 "Rescue-ACE" monster from your hand, except "Rescue-ACE Air Lifter". You can only use each effect of "Rescue-ACE Air Lifter" once per turn.
   de:
   es:
   fr:
@@ -40,8 +40,33 @@ series:
 - Rescue-ACE
 images:
 - index: 1
-  image: RescueACEAirHoister-DBAD-JP-C.png
+  image: RescueACEAirLifter-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN002
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  de:
+  - set_number: AMDE-DE002
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  fr:
+  - set_number: AMDE-FR002
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  it:
+  - set_number: AMDE-IT002
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  pt:
+  - set_number: AMDE-PT002
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: DBAD-JP002
     set_name: 'Deck Build Pack: Amazing Defenders'
