--- a/data/cards/91222209.yaml
+++ b/data/cards/91222209.yaml
@@ -1,7 +1,7 @@
 konami_id: 17993
 password: 91222209
 name:
-  en: Rescue-ACE Intruder
+  en: Rescue-ACE Monitor
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 救援ACE队 双脉冲炮灭火员
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can add 1 "Rescue-ACE" Trap from your Deck to your hand. When your opponent activates a monster effect on the field (Quick Effect): You can Tribute this card from your hand or field, then target 1 "Rescue-ACE" monster in your GY, except "Rescue-ACE Intruder"; Special Summon it. You can only use each effect of "Rescue-ACE Intruder" once per turn.
+    If this card is Normal or Special Summoned: You can add 1 "Rescue-ACE" Trap from your Deck to your hand. When your opponent activates a monster effect on the field (Quick Effect): You can Tribute this card from your hand or face-up field, then target 1 "Rescue-ACE" monster in your GY, except "Rescue-ACE Monitor"; Special Summon it. You can only use each effect of "Rescue-ACE Monitor" once per turn.
   de:
   es:
   fr:
@@ -40,8 +40,33 @@ series:
 - Rescue-ACE
 images:
 - index: 1
-  image: RescueACEIntruder-DBAD-JP-SR.png
+  image: RescueACEMonitor-DBAD-JP-SR.png
 sets:
+  en:
+  - set_number: AMDE-EN003
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  de:
+  - set_number: AMDE-DE003
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: AMDE-FR003
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  it:
+  - set_number: AMDE-IT003
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: AMDE-PT003
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBAD-JP003
     set_name: 'Deck Build Pack: Amazing Defenders'
