--- a/data/cards/16310544.yaml
+++ b/data/cards/16310544.yaml
@@ -15,8 +15,8 @@ name:
   zh-CN: 御巫神乐
 text:
   en: |-
-    This card can be used to Ritual Summon any "Mikanko" Ritual Monster. You must also Tribute monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon, then you can apply the following effect.
-    ● Destroy cards your opponent controls, up to the number of Equip Spells with different names in your GY, and if you do, inflict 1000 damage to your opponent for each card destroyed.
+    This card can be used to Ritual Summon any "Mikanko" Ritual Monster. You must also Tribute monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. Then you can apply the following effect.
+    ● Destroy cards your opponent controls up to the number of Equip Spells with different names in your GY, and if you do, inflict 1000 damage to your opponent for each card destroyed.
     You can only activate 1 "Mikanko Kagura" per turn.
   de:
   es:
@@ -40,6 +40,31 @@ images:
 - index: 1
   image: MikankoKagura-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN034
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  de:
+  - set_number: AMDE-DE034
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  fr:
+  - set_number: AMDE-FR034
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  it:
+  - set_number: AMDE-IT034
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  pt:
+  - set_number: AMDE-PT034
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: DBAD-JP034
     set_name: 'Deck Build Pack: Amazing Defenders'
