--- a/data/cards/16433136.yaml
+++ b/data/cards/16433136.yaml
@@ -1,7 +1,7 @@
 konami_id: 18021
 password: 16433136
 name:
-  en: Purifying Dance of the Mikanko
+  en: Mikanko Purification Dance
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 御巫的祓舞
 text:
   en: |-
-    Equip only to a "Mikanko" monster. It cannot be destroyed by card effects. If a monster(s) is Special Summoned to your opponent's field (except during the Damage Step): You can target 1 monster you control and 1 monster your opponent controls; return them to the hand. You can only use this effect of "Purifying Dance of the Mikanko" once per turn.
+    Equip only to a "Mikanko" monster. The equipped monster cannot be destroyed by card effects. If a monster(s) is Special Summoned to your opponent's field (except during the Damage Step): You can target 1 monster you control and 1 monster your opponent controls; return them to the hand. You can only use this effect of "Mikanko Purification Dance" once per turn.
   de:
   es:
   fr:
@@ -36,8 +36,33 @@ series:
 - Mikanko
 images:
 - index: 1
-  image: PurifyingDanceoftheMikanko-DBAD-JP-C.png
+  image: MikankoPurificationDance-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN031
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  de:
+  - set_number: AMDE-DE031
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  fr:
+  - set_number: AMDE-FR031
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  it:
+  - set_number: AMDE-IT031
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  pt:
+  - set_number: AMDE-PT031
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: DBAD-JP031
     set_name: 'Deck Build Pack: Amazing Defenders'
