--- a/data/cards/17255673.yaml
+++ b/data/cards/17255673.yaml
@@ -1,7 +1,7 @@
 konami_id: 18018
 password: 17255673
 name:
-  en: Doorway of the Celestial Mikanko
+  en: Heavenly Gate of the Mikanko
   de:
   es:
   fr:
@@ -36,7 +36,7 @@ series:
 - Mikanko
 images:
 - index: 1
-  image: DoorwayoftheCelestialMikanko-DBAD-JP-C.png
+  image: HeavenlyGateoftheMikanko-DBAD-JP-C.png
 sets:
   ja:
   - set_number: DBAD-JP028
