--- a/data/cards/18377261.yaml
+++ b/data/cards/18377261.yaml
@@ -1,7 +1,7 @@
 konami_id: 18015
 password: 18377261
 name:
-  en: Hare the Sword Mikanko
+  en: Ha-Re the Sword Mikanko
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 剑之御巫 波礼
 text:
   en: |-
-    If this card is not equipped with any Equip Card, you take no battle damage from battles involving it. If it is, it cannot be destroyed by battle, also your opponent takes any battle damage you would take from battles involving it instead. If this card becomes equipped with an Equip Card: You can add 1 "Mikanko" Equip Spell from your Deck to your hand. You can only use this effect of "Hare the Sword Mikanko" once per turn.
+    If this card is not equipped with an Equip Card, you take no battle damage from battles involving this card. If this card is equipped with an Equip Card, it cannot be destroyed by battle and your opponent takes any battle damage you would have taken from battles involving this card. If an Equip Card becomes equipped to this card: You can add 1 "Mikanko" Equip Spell from your Deck to your hand. You can only use this effect of "Ha-Re the Sword Mikanko" once per turn.
   de:
   es:
   fr:
@@ -40,8 +40,38 @@ series:
 - Mikanko
 images:
 - index: 1
-  image: HaretheSwordMikanko-DBAD-JP-SR.png
+  image: HaRetheSwordMikanko-DBAD-JP-SR.png
 sets:
+  en:
+  - set_number: AMDE-EN025
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
+  de:
+  - set_number: AMDE-DE025
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
+  fr:
+  - set_number: AMDE-FR025
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
+  it:
+  - set_number: AMDE-IT025
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
+  pt:
+  - set_number: AMDE-PT025
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
   ja:
   - set_number: DBAD-JP025
     set_name: 'Deck Build Pack: Amazing Defenders'
