--- a/data/cards/20212491.yaml
+++ b/data/cards/20212491.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 流浪纯爱妖精街道
 text:
   en: |-
-    Your opponent cannot target "Purrely" monsters you control with card effects during the turn they were Special Summoned. Once per turn, if a face-up "Purrely" Xyz Monster(s) you control leaves the field by an opponent's card: Special Summon 1 Level 1 "Purrely" monster from your Deck or GY. Once per turn, during the End Phase: You can target 1 "Purrely" Xyz Monster on the field; attach 1 "Purrely" Quick-Play Spell from your Deck or GY to it as material.
+    Your opponent cannot target "Purrely" monsters you control with card effects, the turn they are Special Summoned. Once per turn, if a face-up "Purrely" Xyz Monster(s) you control leaves the field because of an opponent's card: Special Summon 1 Level 1 "Purrely" monster from your Deck or GY. Once per turn, during the End Phase: You can target 1 "Purrely" Xyz Monster on the field; attach 1 "Purrely" Quick-Play Spell from your Deck or GY to that monster as material.
   de:
   es:
   fr:
@@ -38,6 +38,31 @@ images:
 - index: 1
   image: StrayPurrelyStreet-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN019
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  de:
+  - set_number: AMDE-DE019
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  fr:
+  - set_number: AMDE-FR019
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  it:
+  - set_number: AMDE-IT019
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  pt:
+  - set_number: AMDE-PT019
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: DBAD-JP019
     set_name: 'Deck Build Pack: Amazing Defenders'
