--- a/data/cards/24434049.yaml
+++ b/data/cards/24434049.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 2 monsters
-    Once per turn: You can target up to 2 Spells/Traps in any GY(s); attach them to this card as material. This is a Quick Effect if this card has "Purrely Delicious Memory" as material. Thrice per turn, when you activate a "Purrely" Quick-Play Spell Card (Quick Effect): You can attach that card on the field to this card as material, then you can banish 1 monster on the field until the End Phase.
+    Once per turn: You can target up to 2 Spells/Traps in the GYs; attach them to this card as material. This is a Quick Effect if this card has "Purrely Delicious Memory" as material. Up to thrice per turn, when you activate a "Purrely" Quick-Play Spell Card (Quick Effect): You can attach that card on the field to this card as material, then you can banish 1 monster on the field until the End Phase.
   de:
   es:
   fr:
@@ -45,6 +45,31 @@ images:
 - index: 1
   image: EpurrelyPlump-DBAD-JP-SR.png
 sets:
+  en:
+  - set_number: AMDE-EN016
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  de:
+  - set_number: AMDE-DE016
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: AMDE-FR016
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  it:
+  - set_number: AMDE-IT016
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: AMDE-PT016
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBAD-JP016
     set_name: 'Deck Build Pack: Amazing Defenders'
