--- a/data/cards/25550531.yaml
+++ b/data/cards/25550531.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 纯爱妖精
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can excavate the top 3 cards of your Deck, and if you do, you can add 1 excavated "Purrely" Spell/Trap to your hand, also place the rest on the bottom of the Deck in any order. Once per turn: You can reveal 1 "Purrely" Quick-Play Spell in your hand and Special Summon 1 Xyz Monster that mentions it from your Extra Deck, by using this face-up card you control as material, and if you do, attach the revealed card to the Summoned monster as additional material. (This is treated as an Xyz Summon.)
+    If this card is Normal or Special Summoned: You can excavate the top 3 cards of your Deck, and if you do, you can add 1 excavated "Purrely" Spell/Trap to your hand, also place the rest on the bottom of your Deck in any order. Once per turn, during your Main Phase: You can reveal 1 "Purrely" Quick-Play Spell in your hand, Special Summon 1 Xyz Monster from your Extra Deck that mentions that card, by using this card you control as material, and attach the revealed card to the Summoned monster. (This is treated as an Xyz Summon.)
   de:
   es:
   fr:
@@ -41,6 +41,36 @@ images:
 - index: 1
   image: Purrely-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN013
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
+  de:
+  - set_number: AMDE-DE013
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
+  fr:
+  - set_number: AMDE-FR013
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
+  it:
+  - set_number: AMDE-IT013
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
+  pt:
+  - set_number: AMDE-PT013
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBAD-JP013
     set_name: 'Deck Build Pack: Amazing Defenders'
