--- a/data/cards/26372118.yaml
+++ b/data/cards/26372118.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as a "Rescue-ACE" card.)
-    Add 1 "Rescue-ACE" monster from your GY to your hand, or, if you control "Rescue-ACE Hydrant", you can add 1 "Rescue-ACE" monster from your Deck to your hand instead. You can only activate 1 "ALERT!" per turn.
+    Add 1 "Rescue-ACE" monster from your GY to your hand, or if you control "Rescue-ACE Hydrant", you can add 1 "Rescue-ACE" monster from your Deck to your hand instead. You can only activate 1 "ALERT!" per turn.
   de:
   es:
   fr:
@@ -38,6 +38,31 @@ images:
 - index: 1
   image: ALERT-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN010
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: AMDE-DE010
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: AMDE-FR010
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: AMDE-IT010
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: AMDE-PT010
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBAD-JP010
     set_name: 'Deck Build Pack: Amazing Defenders'
