--- a/data/cards/29599813.yaml
+++ b/data/cards/29599813.yaml
@@ -15,7 +15,9 @@ name:
   zh-CN: 纯爱妖精可爱回忆
 text:
   en: |-
-    Each player gains 1000 LP, then you can discard 1 card, and if you do, Special Summon 1 Level 1 "Purrely" monster from your Deck. A "Purrely" Xyz Monster that has this card as material gains this effect.
+    Each player gains 1000 LP, then you can apply the following effect.
+     ● Discard 1 card, and if you do, Special Summon 1 Level 1 "Purrely" monster from your Deck.
+    A "Purrely" Xyz Monster that has this card as material gains the following effect.
     ● Once per turn: You can send 1 other card you control to the GY, then target 1 card your opponent controls; attach it to this card as material.
   de:
   es:
@@ -40,6 +42,31 @@ images:
 - index: 1
   image: PurrelyPrettyMemory-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN022
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: AMDE-DE022
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: AMDE-FR022
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: AMDE-IT022
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: AMDE-PT022
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBAD-JP022
     set_name: 'Deck Build Pack: Amazing Defenders'
