--- a/data/cards/37495766.yaml
+++ b/data/cards/37495766.yaml
@@ -48,26 +48,31 @@ sets:
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: AMDE-DE007
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: AMDE-FR007
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: AMDE-IT007
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: AMDE-PT007
     set_name: Amazing Defenders
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBAD-JP007
     set_name: 'Deck Build Pack: Amazing Defenders'
