--- a/data/cards/37617348.yaml
+++ b/data/cards/37617348.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 救援ACE队 消防栓
 text:
   en: |-
-    While you control a "Rescue-ACE" monster other than "Rescue-ACE Hydrant", your opponent's monsters cannot target this card for attacks, also your opponent cannot target this card with card effects. You can only use each of the following effects of "Rescue-ACE Hydrant" once per turn. You can activate 1 Quick-Play Spell Card or Trap Card Set by your "Rescue-ACE" card's effect the turn it was Set. During your Main Phase: You can add 1 "Rescue-ACE" monster from your Deck to your hand, except "Rescue-ACE Hydrant".
+    While you control a "Rescue-ACE" monster other than "Rescue-ACE Hydrant", your opponent's monsters cannot target this card for attacks, also your opponent cannot target this card with card effects. You can only use each of the following effects of "Rescue-ACE Hydrant" once per turn. You can activate a Quick-Play Spell, or Trap Card, that was Set by the effect of your "Rescue-ACE" card, the turn it was Set. During your Main Phase: You can add 1 "Rescue-ACE" monster from your Deck to your hand, except "Rescue-ACE Hydrant".
   de:
   es:
   fr:
@@ -43,6 +43,36 @@ images:
 - index: 1
   image: RescueACEHydrant-DBAD-JP-SR.png
 sets:
+  en:
+  - set_number: AMDE-EN004
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
+  de:
+  - set_number: AMDE-DE004
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
+  fr:
+  - set_number: AMDE-FR004
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
+  it:
+  - set_number: AMDE-IT004
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
+  pt:
+  - set_number: AMDE-PT004
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBAD-JP004
     set_name: 'Deck Build Pack: Amazing Defenders'
