--- a/data/cards/38339996.yaml
+++ b/data/cards/38339996.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 救援ACE队 脉冲灭火员
 text:
   en: |-
-    During your Main Phase: You can choose 1 Effect Monster your opponent controls with the highest ATK (your choice, if tied), and neither player can activate that monster's effects on the field this turn. When your opponent activates a monster effect on the field (Quick Effect): You can Tribute this card from your hand or field; Special Summon 1 Machine "Rescue-ACE" monster from your Deck. You can only use each effect of "Rescue-ACE Impulse" once per turn.
+    During your Main Phase: You can choose the 1 Effect Monster your opponent controls with the highest ATK (your choice, if tied), and neither player can activate that monster's effects on the field this turn. When your opponent activates a monster effect on the field (Quick Effect): You can Tribute this card from your hand or face-up field; Special Summon 1 Machine "Rescue-ACE" monster from your Deck. You can only use each effect of "Rescue-ACE Impulse" once per turn.
   de:
   es:
   fr:
@@ -42,6 +42,31 @@ images:
 - index: 1
   image: RescueACEImpulse-DBAD-JP-SR.png
 sets:
+  en:
+  - set_number: AMDE-EN001
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  de:
+  - set_number: AMDE-DE001
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: AMDE-FR001
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  it:
+  - set_number: AMDE-IT001
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: AMDE-PT001
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBAD-JP001
     set_name: 'Deck Build Pack: Amazing Defenders'
