--- a/data/cards/42705243.yaml
+++ b/data/cards/42705243.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 御巫之契
 text:
   en: |-
-    Special Summon 1 "Mikanko" monster from your hand or Deck (but banish it when it leaves the field), then you can equip it with 1 appropriate Equip Spell from your hand or GY. You can only activate 1 "Mikanko Promise" per turn.
+    Special Summon 1 "Mikanko" monster from your hand or Deck, then you can equip it with 1 Equip Spell from your hand or GY that can equip to that monster. Banish that monster when it leaves the field. You can only activate 1 "Mikanko Promise" per turn.
   de:
   es:
   fr:
@@ -37,6 +37,31 @@ images:
 - index: 1
   image: MikankoPromise-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN035
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  de:
+  - set_number: AMDE-DE035
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  fr:
+  - set_number: AMDE-FR035
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  it:
+  - set_number: AMDE-IT035
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  pt:
+  - set_number: AMDE-PT035
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: DBAD-JP035
     set_name: 'Deck Build Pack: Amazing Defenders'
