--- a/data/cards/43527730.yaml
+++ b/data/cards/43527730.yaml
@@ -1,7 +1,7 @@
 konami_id: 18022
 password: 43527730
 name:
-  en: Arabesque of the Mikanko
+  en: Mikanko Water Arabesque
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 御巫的水舞蹈
 text:
   en: |-
-    The equipped monster cannot be destroyed by card effects. During your Main Phase: You can Special Summon 1 "Mikanko" monster from your hand or Deck with a different original name than the equipped monster, and if you do, equip it with this card, then return to the hand the monster this card was equipped to. You can only use this effect of "Arabesque of the Mikanko" once per turn.
+    The equipped monster cannot be destroyed by card effects. During your Main Phase: You can Special Summon 1 "Mikanko" monster from your hand or Deck, with a different original name than the equipped monster, and if you do, equip it with this card, then return the monster that was previously equipped with this card to the hand. You can only use this effect of "Mikanko Water Arabesque" once per turn.
   de:
   es:
   fr:
@@ -36,8 +36,33 @@ series:
 - Mikanko
 images:
 - index: 1
-  image: ArabesqueoftheMikanko-DBAD-JP-SR.png
+  image: MikankoWaterArabesque-DBAD-JP-SR.png
 sets:
+  en:
+  - set_number: AMDE-EN032
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: AMDE-DE032
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: AMDE-FR032
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: AMDE-IT032
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: AMDE-PT032
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBAD-JP032
     set_name: 'Deck Build Pack: Amazing Defenders'
