--- a/data/cards/44649322.yaml
+++ b/data/cards/44649322.yaml
@@ -1,7 +1,7 @@
 konami_id: 18019
 password: 44649322
 name:
-  en: The Great Mikanko of Legend
+  en: The Great Mikanko Ceremony
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 传承的大御巫
 text:
   en: |-
-    Special Summon 1 "Mikanko" monster from your hand, ignoring its Summoning conditions, but return it to the hand during your opponent's End Phase. During your Main Phase: You can banish this card from your GY; send 1 "Mikanko" card from your Deck to the GY, except "The Great Mikanko of Legend". You can only use each effect of "The Great Mikanko of Legend" once per turn.
+    Special Summon 1 "Mikanko" monster from your hand, ignoring its Summoning conditions, but return it to the hand during your opponent's End Phase. During your Main Phase: You can banish this card from your GY; send 1 "Mikanko" card from your Deck to the GY, except "The Great Mikanko Ceremony". You can only use each effect of "The Great Mikanko Ceremony" once per turn.
   de:
   es:
   fr:
@@ -36,8 +36,33 @@ series:
 - Mikanko
 images:
 - index: 1
-  image: TheGreatMikankoofLegend-DBAD-JP-C.png
+  image: TheGreatMikankoCeremony-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN029
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  de:
+  - set_number: AMDE-DE029
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  fr:
+  - set_number: AMDE-FR029
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  it:
+  - set_number: AMDE-IT029
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  pt:
+  - set_number: AMDE-PT029
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: DBAD-JP029
     set_name: 'Deck Build Pack: Amazing Defenders'
