--- a/data/cards/51822687.yaml
+++ b/data/cards/51822687.yaml
@@ -50,22 +50,32 @@ sets:
   - set_number: AMDE-EN017
     set_name: Amazing Defenders
     rarities:
+    - Super Rare
+    - Collector's Rare
   de:
   - set_number: AMDE-DE017
     set_name: Amazing Defenders
     rarities:
+    - Super Rare
+    - Collector's Rare
   fr:
   - set_number: AMDE-FR017
     set_name: Amazing Defenders
     rarities:
+    - Super Rare
+    - Collector's Rare
   it:
   - set_number: AMDE-IT017
     set_name: Amazing Defenders
     rarities:
+    - Super Rare
+    - Collector's Rare
   pt:
   - set_number: AMDE-PT017
     set_name: Amazing Defenders
     rarities:
+    - Super Rare
+    - Collector's Rare
   ja:
   - set_number: DBAD-JP017
     set_name: 'Deck Build Pack: Amazing Defenders'
