--- a/data/cards/52645235.yaml
+++ b/data/cards/52645235.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 2 monsters
-    At the end of the Damage Step, if this card battled: You can add 1 "Purrely" card from your Deck to your hand, also if this card has "Purrely Happy Memory" as material, you can halve the ATK of 1 face-up monster on the field. Thrice per turn, when you activate a "Purrely" Quick-Play Spell Card (Quick Effect): You can attach that card on the field to this card as material, then you can return 1 Spell/Trap your opponent controls to the hand.
+    At the end of the Damage Step, if this card battled: You can add 1 "Purrely" card from your Deck to your hand, also, if this card has "Purrely Happy Memory" as material, you can halve the ATK of 1 face-up monster on the field. Up to thrice per turn, when you activate a "Purrely" Quick-Play Spell Card (Quick Effect): You can attach that card on the field to this card as material, then you can return 1 Spell/Trap your opponent controls to the hand.
   de:
   es:
   fr:
@@ -45,6 +45,31 @@ images:
 - index: 1
   image: EpurrelyHappiness-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN014
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  de:
+  - set_number: AMDE-DE014
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  fr:
+  - set_number: AMDE-FR014
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  it:
+  - set_number: AMDE-IT014
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  pt:
+  - set_number: AMDE-PT014
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: DBAD-JP014
     set_name: 'Deck Build Pack: Amazing Defenders'
