--- a/data/cards/54862960.yaml
+++ b/data/cards/54862960.yaml
@@ -1,7 +1,7 @@
 konami_id: 18016
 password: 54862960
 name:
-  en: Nini the Mirror Mikanko
+  en: Ni-Ni the Mirror Mikanko
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 镜之御巫 迩迩
 text:
   en: |-
-    If this card is not equipped with any Equip Card, you take no battle damage from battles involving it. If it is, it cannot be destroyed by battle, also your opponent takes any battle damage you would take from battles involving it instead. During your opponent's turn, while this card is equipped with an Equip Card (Quick Effect): You can target 1 face-up monster your opponent controls; take control of it until the End Phase. You can only use this effect of "Nini the Mirror Mikanko" once per turn.
+    If this card is not equipped with an Equip Card, you take no battle damage from battles involving this card. If this card is equipped with an Equip Card, it cannot be destroyed by battle and your opponent takes any battle damage you would have taken from battles involving this card. During your opponent's turn, while this card is equipped with an Equip Card (Quick Effect): You can target 1 face-up monster your opponent controls; take control of it until the End Phase. You can only use this effect of "Ni-Ni the Mirror Mikanko" once per turn.
   de:
   es:
   fr:
@@ -40,8 +40,38 @@ series:
 - Mikanko
 images:
 - index: 1
-  image: NinitheMirrorMikanko-DBAD-JP-SR.png
+  image: NiNitheMirrorMikanko-DBAD-JP-SR.png
 sets:
+  en:
+  - set_number: AMDE-EN026
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
+  de:
+  - set_number: AMDE-DE026
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
+  fr:
+  - set_number: AMDE-FR026
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
+  it:
+  - set_number: AMDE-IT026
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
+  pt:
+  - set_number: AMDE-PT026
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
   ja:
   - set_number: DBAD-JP026
     set_name: 'Deck Build Pack: Amazing Defenders'
