--- a/data/cards/55584558.yaml
+++ b/data/cards/55584558.yaml
@@ -15,7 +15,9 @@ name:
   zh-CN: 纯爱妖精美味回忆
 text:
   en: |-
-    Make 1 monster on the field unable to be destroyed by battle (until the end of the next turn), then you can discard 1 card, and if you do, Special Summon 1 Level 1 "Purrely" monster from your Deck. A "Purrely" Xyz Monster that has this card as material gains this effect.
+    Choose 1 monster on the field, and until the end of the next turn, it cannot be destroyed by battle. After choosing a card, then you can apply the following effect.
+    ● Discard 1 card, and if you do, Special Summon 1 Level 1 "Purrely" monster from your Deck.
+    A "Purrely" Xyz Monster that has this card as material gains the following effect.
     ● Gains 300 ATK/DEF for each material attached to it.
   de:
   es:
@@ -40,6 +42,31 @@ images:
 - index: 1
   image: PurrelyDeliciousMemory-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN023
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  de:
+  - set_number: AMDE-DE023
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  fr:
+  - set_number: AMDE-FR023
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  it:
+  - set_number: AMDE-IT023
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  pt:
+  - set_number: AMDE-PT023
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: DBAD-JP023
     set_name: 'Deck Build Pack: Amazing Defenders'
