--- a/data/cards/56700100.yaml
+++ b/data/cards/56700100.yaml
@@ -1,7 +1,7 @@
 konami_id: 18010
 password: 56700100
 name:
-  en: Purrely, My Friend
+  en: My Friend Purrely
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 我的纯爱妖精朋友
 text:
   en: |-
-    You can pay 500 LP; reveal 3 "Purrely" cards from your Deck, except "Purrely, My Friend", your opponent randomly picks 1 for you to add to your hand, and you shuffle the rest back into the Deck. If a face-up "Purrely" Xyz Monster(s) you control leaves the field by an opponent's card (even during the Damage Step): You can add up to 3 "Purrely" Quick-Play Spells with different names from your GY to your hand. You can only use each effect of "Purrely, My Friend" once per turn.
+    You can pay 500 LP; reveal 3 "Purrely" cards from your Deck, except "My Friend Purrely", and your opponent randomly picks 1 for you to add to your hand, also shuffle the rest into your Deck. If a face-up "Purrely" Xyz Monster(s) you control leaves the field because of an opponent's card, even during the Damage Step: You can add up to 3 "Purrely" Quick-Play Spells with different names from your GY to your hand. You can only use each effect of "My Friend Purrely" once per turn.
   de:
   es:
   fr:
@@ -36,8 +36,38 @@ series:
 - Purrely
 images:
 - index: 1
-  image: PurrelyMyFriend-DBAD-JP-SR.png
+  image: MyFriendPurrely-DBAD-JP-SR.png
 sets:
+  en:
+  - set_number: AMDE-EN020
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
+  de:
+  - set_number: AMDE-DE020
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
+  fr:
+  - set_number: AMDE-FR020
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
+  it:
+  - set_number: AMDE-IT020
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
+  pt:
+  - set_number: AMDE-PT020
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBAD-JP020
     set_name: 'Deck Build Pack: Amazing Defenders'
