--- a/data/cards/62777823.yaml
+++ b/data/cards/62777823.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as a "Rescue-ACE" card.)
-    If you control a "Rescue-ACE" monster: Target 1 Effect Monster your opponent controls; this turn, that Effect Monster cannot attack, its effects are negated, also if you control "Rescue-ACE Hydrant", it cannot be used as material for a Fusion, Synchro, Xyz, or Link Summon.
+    If you control a "Rescue-ACE" monster: Target 1 Effect Monster your opponent controls; this turn, that Effect Monster cannot attack, also its effects are negated. If you control "Rescue-ACE Hydrant" at resolution of this effect, that monster also cannot be used as material for a Fusion, Synchro, Xyz, or Link Summon this turn.
   de:
   es:
   fr:
@@ -38,6 +38,31 @@ images:
 - index: 1
   image: CONTAIN-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN011
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  de:
+  - set_number: AMDE-DE011
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  fr:
+  - set_number: AMDE-FR011
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  it:
+  - set_number: AMDE-IT011
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  pt:
+  - set_number: AMDE-PT011
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: DBAD-JP011
     set_name: 'Deck Build Pack: Amazing Defenders'
