--- a/data/cards/63899465.yaml
+++ b/data/cards/63899465.yaml
@@ -1,7 +1,7 @@
 konami_id: 17998
 password: 63899465
 name:
-  en: Rescue-ACE Headquarters
+  en: Rescue-ACE HQ
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 救援ACE队总部
 text:
   en: |-
-    While your opponent controls a monster, "Rescue-ACE" monsters you control gain 500 ATK/DEF. During your Main Phase, you can Normal Summon 1 "Rescue-ACE" monster in addition to your Normal Summon/Set. (You can only gain this effect once per turn.) Once per turn: You can target 4 of your "Rescue-ACE" cards that are banished and/or in your GY; shuffle them into the Deck, then draw 1 card.
+    While your opponent controls a monster, all "Rescue-ACE" monsters you control gain 500 ATK/DEF. During your Main Phase, you can Normal Summon 1 "Rescue-ACE" monster, in addition to your Normal Summon/Set. (You can only gain this effect once per turn.) Once per turn: You can target 4 of your "Rescue-ACE" cards that are banished and/or in your GY; shuffle them into the Deck, then draw 1 card.
   de:
   es:
   fr:
@@ -36,8 +36,33 @@ series:
 - Rescue-ACE
 images:
 - index: 1
-  image: RescueACEHeadquarters-DBAD-JP-C.png
+  image: RescueACEHQ-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN008
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  de:
+  - set_number: AMDE-DE008
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  fr:
+  - set_number: AMDE-FR008
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  it:
+  - set_number: AMDE-IT008
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  pt:
+  - set_number: AMDE-PT008
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: DBAD-JP008
     set_name: 'Deck Build Pack: Amazing Defenders'
