--- a/data/cards/64612053.yaml
+++ b/data/cards/64612053.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 救援ACE队 空中灭火机
 text:
   en: |-
-    If a "Rescue-ACE" monster(s) other than "Rescue-ACE Fire Attacker" is Normal or Special Summoned to your field (except during the Damage Step): You can Special Summon this card from your hand. If a card(s) is added to your opponent's hand, except by drawing it: You can draw 2 cards, then discard 1 card. You can only use each effect of "Rescue-ACE Fire Attacker" once per turn.
+    If a "Rescue-ACE" monster(s) is Normal or Special Summoned to your field, except "Rescue-ACE Fire Attacker" (except during the Damage Step): You can Special Summon this card from your hand. If a card(s) is added to your opponent's hand, except by drawing it (except during the Damage Step): You can draw 2 cards, then discard 1 card. You can only use each effect of "Rescue-ACE Fire Attacker" once per turn.
   de:
   es:
   fr:
@@ -42,6 +42,31 @@ images:
 - index: 1
   image: RescueACEFireAttacker-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN005
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  de:
+  - set_number: AMDE-DE005
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  fr:
+  - set_number: AMDE-FR005
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  it:
+  - set_number: AMDE-IT005
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  pt:
+  - set_number: AMDE-PT005
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: DBAD-JP005
     set_name: 'Deck Build Pack: Amazing Defenders'
