--- a/data/cards/78199891.yaml
+++ b/data/cards/78199891.yaml
@@ -1,7 +1,7 @@
 konami_id: 18026
 password: 78199891
 name:
-  en: Mikanko Catfight
+  en: Mikanko Rivalry
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 御巫神较
 text:
   en: |-
-    If you control a "Mikanko" monster: Target 1 face-up monster on the field; equip it with 1 appropriate Equip Spell from your Deck. If an Equip Spell(s) is sent to your GY while this card is in your GY (except during the Damage Step): You can banish this card, then target 1 Equip Spell in your GY; add it to your hand. You can only use each effect of "Mikanko Catfight" once per turn.
+    If you control a "Mikanko" monster: Target 1 face-up monster on the field; equip it with 1 Equip Spell from your Deck that can equip to it. If an Equip Spell(s) is sent to your GY, while this card is in your GY (except during the Damage Step): You can banish this card, then target 1 Equip Spell in your GY; add it to your hand. You can only use each effect of "Mikanko Rivalry" once per turn.
   de:
   es:
   fr:
@@ -36,8 +36,33 @@ series:
 - Mikanko
 images:
 - index: 1
-  image: MikankoCatfight-DBAD-JP-C.png
+  image: MikankoRivalry-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN036
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  de:
+  - set_number: AMDE-DE036
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  fr:
+  - set_number: AMDE-FR036
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  it:
+  - set_number: AMDE-IT036
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  pt:
+  - set_number: AMDE-PT036
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: DBAD-JP036
     set_name: 'Deck Build Pack: Amazing Defenders'
