--- a/data/cards/79912449.yaml
+++ b/data/cards/79912449.yaml
@@ -1,7 +1,7 @@
 konami_id: 18023
 password: 79912449
 name:
-  en: Inviting Rondo of the Mikanko
+  en: Mikanko Reflection Rondo
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 御巫的诱轮舞
 text:
   en: |-
-    Equip to an opponent's monster. Take control of it while you control a "Mikanko" monster, but it cannot activate its effects while you control it. When this card leaves the field, send the equipped monster to the GY. You can only control 1 "Inviting Rondo of the Mikanko". You can only activate 1 "Inviting Rondo of the Mikanko" per turn.
+    Equip only to an opponent's monster. While you control a "Mikanko" monster, take control of that equipped monster. Neither player can activate the effects of the equipped monster while you control it. When this card leaves the field, send the equipped monster to the GY. You can only control 1 "Mikanko Reflection Rondo". You can only activate 1 "Mikanko Reflection Rondo" per turn.
   de:
   es:
   fr:
@@ -38,8 +38,38 @@ series:
 - Mikanko
 images:
 - index: 1
-  image: InvitingRondooftheMikanko-DBAD-JP-C.png
+  image: MikankoReflectionRondo-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN033
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+    - Collector's Rare
+  de:
+  - set_number: AMDE-DE033
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+    - Collector's Rare
+  fr:
+  - set_number: AMDE-FR033
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+    - Collector's Rare
+  it:
+  - set_number: AMDE-IT033
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+    - Collector's Rare
+  pt:
+  - set_number: AMDE-PT033
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+    - Collector's Rare
   ja:
   - set_number: DBAD-JP033
     set_name: 'Deck Build Pack: Amazing Defenders'
