--- a/data/cards/82105704.yaml
+++ b/data/cards/82105704.yaml
@@ -15,7 +15,9 @@ name:
   zh-CN: 纯爱妖精快乐回忆
 text:
   en: |-
-    Apply this effect to 1 card on the field (until the end of the next turn), then you can discard 1 card, and if you do, Special Summon 1 Level 1 "Purrely" monster from your Deck. Once applied, the next time that card would be destroyed by card effect, it is not destroyed. A "Purrely" Xyz Monster that has this card as material gains this effect.
+    Choose 1 card on the field, and until the end of the next turn, the first time it would be destroyed by card effect, it is not destroyed. After choosing a card, then you can apply the following effect.
+    ● Discard 1 card, and if you do, Special Summon 1 Level 1 "Purrely" monster from your Deck.
+    A "Purrely" Xyz Monster that has this card as material gains the following effect.
     ● This card can attack monsters a number of times each Battle Phase, up to the number of "Purrely Happy Memory" attached to it +1.
   de:
   es:
@@ -40,6 +42,31 @@ images:
 - index: 1
   image: PurrelyHappyMemory-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN021
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  de:
+  - set_number: AMDE-DE021
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  fr:
+  - set_number: AMDE-FR021
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  it:
+  - set_number: AMDE-IT021
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  pt:
+  - set_number: AMDE-PT021
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: DBAD-JP021
     set_name: 'Deck Build Pack: Amazing Defenders'
