--- a/data/cards/82983267.yaml
+++ b/data/cards/82983267.yaml
@@ -1,7 +1,7 @@
 konami_id: 18014
 password: 82983267
 name:
-  en: Purrely Leap!?
+  en: Purrelyeap!?
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 纯爱妖精跳越！？
 text:
   en: |-
-    Target 1 "Purrely" Xyz Monster you control; Special Summon from your Extra Deck, 1 "Purrely" Xyz Monster with a different Rank than that monster you control, by using it as material, but return it to the Extra Deck during the End Phase of the next turn. (This is treated as an Xyz Summon. Transfer its materials to the Summoned monster.) You can banish this card from your GY, then target up to 3 "Purrely" monsters in your GY; shuffle them into the Deck. You can only activate 1 "Purrely Leap!?" per turn.
+    Target 1 "Purrely" Xyz Monster you control; Special Summon from your Extra Deck, 1 "Purrely" Xyz Monster with a different Rank, by using that target as material, but return it to the Extra Deck during the End Phase of the next turn. (This is treated as an Xyz Summon. Transfer its materials to the Summoned monster.) You can banish this card from your GY, then target up to 3 "Purrely" monsters in your GY; shuffle them into the Deck. You can only activate 1 "Purrelyeap!?" per turn.
   de:
   es:
   fr:
@@ -36,8 +36,33 @@ series:
 - Purrely
 images:
 - index: 1
-  image: PurrelyLeap-DBAD-JP-C.png
+  image: Purrelyeap-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN024
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  de:
+  - set_number: AMDE-DE024
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  fr:
+  - set_number: AMDE-FR024
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  it:
+  - set_number: AMDE-IT024
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  pt:
+  - set_number: AMDE-PT024
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: DBAD-JP024
     set_name: 'Deck Build Pack: Amazing Defenders'
