--- a/data/cards/83827392.yaml
+++ b/data/cards/83827392.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 7 monsters
-    You can also Xyz Summon this card by using 1 Rank 2 monster you control with 5 or more materials. (Transfer its materials to this card.) This card with 5 or more materials is unaffected by your opponent's activated effects. You can detach 2 materials from this card, then target 1 card your opponent controls or in their GY; place it on the bottom of the Deck. This is a Quick Effect if this card has a Level 1 "Purrely" monster as material.
+    You can also Xyz Summon this card by using a Rank 2 monster you control with 5 or more materials. (Transfer its materials to this card.) This card is unaffected by your opponent's activated effects while it has 5 or more materials. You can detach 2 materials from this card, then target 1 card your opponent controls or in their GY; place it on the bottom of the Deck. This is a Quick Effect if this card has a Level 1 "Purrely" monster as material.
   de:
   es:
   fr:
@@ -46,6 +46,36 @@ images:
 - index: 1
   image: ExpurrelyNoir-DBAD-JP-SR.png
 sets:
+  en:
+  - set_number: AMDE-EN018
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
+  de:
+  - set_number: AMDE-DE018
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
+  fr:
+  - set_number: AMDE-FR018
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
+  it:
+  - set_number: AMDE-IT018
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
+  pt:
+  - set_number: AMDE-PT018
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
   ja:
   - set_number: DBAD-JP018
     set_name: 'Deck Build Pack: Amazing Defenders'
