--- a/data/cards/90000652.yaml
+++ b/data/cards/90000652.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 救援ACE队 消防战车人
 text:
   en: |-
-    If a "Rescue-ACE" monster(s) other than "Rescue-ACE Fire Engine" is Normal or Special Summoned to your field (except during the Damage Step): You can Special Summon this card from your hand. If a monster(s) is Special Summoned to your opponent's field (except during the Damage Step): You can Special Summon 1 Level 4 or lower "Rescue-ACE" monster from your hand, Deck, or GY. You can only use each effect of "Rescue-ACE Fire Engine" once per turn.
+    If a "Rescue-ACE" monster(s) is Normal or Special Summoned to your field, except "Rescue-ACE Fire Engine" (except during the Damage Step): You can Special Summon this card from your hand. If a monster(s) is Special Summoned to your opponent's field (except during the Damage Step): You can Special Summon 1 Level 4 or lower "Rescue-ACE" monster from your hand, Deck, or GY. You can only use each effect of "Rescue-ACE Fire Engine" once per turn.
   de:
   es:
   fr:
@@ -42,6 +42,31 @@ images:
 - index: 1
   image: RescueACEFireEngine-DBAD-JP-SR.png
 sets:
+  en:
+  - set_number: AMDE-EN006
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  de:
+  - set_number: AMDE-DE006
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: AMDE-FR006
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  it:
+  - set_number: AMDE-IT006
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: AMDE-PT006
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBAD-JP006
     set_name: 'Deck Build Pack: Amazing Defenders'
