--- a/data/cards/98049934.yaml
+++ b/data/cards/98049934.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 2 monsters
-    Once per turn: You can target 1 Effect Monster your opponent controls; negate its effects until the end of this turn. This is a Quick Effect if this card has "Purrely Pretty Memory" as material. Thrice per turn, when you activate a "Purrely" Quick-Play Spell Card (Quick Effect): You can attach that card on the field to this card as material, then you can change the battle position of 1 monster your opponent controls.
+    Once per turn: You can target 1 Effect Monster your opponent controls; negate its effects until the end of this turn. This is a Quick Effect if this card has "Purrely Pretty Memory" as material. Up to thrice per turn, when you activate a "Purrely" Quick-Play Spell Card (Quick Effect): You can attach that card on the field to this card as material, then you can change the battle position of 1 monster your opponent controls.
   de:
   es:
   fr:
@@ -45,6 +45,31 @@ images:
 - index: 1
   image: EpurrelyBeauty-DBAD-JP-SR.png
 sets:
+  en:
+  - set_number: AMDE-EN015
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  de:
+  - set_number: AMDE-DE015
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  fr:
+  - set_number: AMDE-FR015
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  it:
+  - set_number: AMDE-IT015
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: AMDE-PT015
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBAD-JP015
     set_name: 'Deck Build Pack: Amazing Defenders'
