--- a/data/cards/99162522.yaml
+++ b/data/cards/99162522.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as a "Rescue-ACE" card.)
-    If you control a "Rescue-ACE" monster: Target 1 Effect Monster your opponent controls; destroy it, then, if you control "Rescue-ACE Hydrant", this turn, your opponent cannot activate the effects of the destroyed monster or monsters with the same original name.
+    If you control a "Rescue-ACE" monster: Target 1 Effect Monster your opponent controls; destroy it, then, if you currently control "Rescue-ACE Hydrant", your opponent cannot activate the effects of that destroyed monster, or of monsters with its same original name, this turn.
   de:
   es:
   fr:
@@ -38,6 +38,31 @@ images:
 - index: 1
   image: EXTINGUISH-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN012
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  de:
+  - set_number: AMDE-DE012
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  fr:
+  - set_number: AMDE-FR012
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  it:
+  - set_number: AMDE-IT012
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+  pt:
+  - set_number: AMDE-PT012
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: DBAD-JP012
     set_name: 'Deck Build Pack: Amazing Defenders'
