--- a/data/cards/99984170.yaml
+++ b/data/cards/99984170.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     (This card is always treated as a "Rescue-ACE" card.)
-    Target 1 "Rescue-ACE" monster in your GY, or, if you control "Rescue-ACE Hydrant", you can target 1 monster in your opponent's GY instead; Special Summon it to your field. You can only activate 1 "RESCUE!" per turn.
+    Target 1 "Rescue-ACE" monster in your GY, or if you control "Rescue-ACE Hydrant", you can target 1 monster in your opponent's GY instead; Special Summon it to your field. You can only activate 1 "RESCUE!" per turn.
   de:
   es:
   fr:
@@ -38,6 +38,31 @@ images:
 - index: 1
   image: RESCUE-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN009
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: AMDE-DE009
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: AMDE-FR009
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: AMDE-IT009
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: AMDE-PT009
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBAD-JP009
     set_name: 'Deck Build Pack: Amazing Defenders'
