--- a/data/cards/14602126.yaml
+++ b/data/cards/14602126.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Super Rare
+  - set_number: AMDE-EN044
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   de:
   - set_number: DLCS-DE145
     set_name: 'Dragons of Legend: The Complete Series'
@@ -68,6 +72,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Super Rare
+  - set_number: AMDE-DE044
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   fr:
   - set_number: DLCS-FR145
     set_name: 'Dragons of Legend: The Complete Series'
@@ -81,6 +89,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Super Rare
+  - set_number: AMDE-FR044
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   it:
   - set_number: DLCS-IT145
     set_name: 'Dragons of Legend: The Complete Series'
@@ -94,6 +106,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Super Rare
+  - set_number: AMDE-IT044
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   pt:
   - set_number: DLCS-PT145
     set_name: 'Dragons of Legend: The Complete Series'
@@ -107,6 +123,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Super Rare
+  - set_number: AMDE-PT044
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: PHRA-JP066
     set_name: Phantom Rage
