--- a/data/cards/29330706.yaml
+++ b/data/cards/29330706.yaml
@@ -52,6 +52,10 @@ sets:
     set_name: Rise of the True Dragons Structure Deck
     rarities:
     - Common
+  - set_number: AMDE-EN047
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   de:
   - set_number: SHSP-DE012
     set_name: Shadow Specters
@@ -61,6 +65,10 @@ sets:
     set_name: Rise of the True Dragons Structure Deck
     rarities:
     - Common
+  - set_number: AMDE-DE047
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   fr:
   - set_number: SHSP-FR012
     set_name: Shadow Specters
@@ -70,6 +78,10 @@ sets:
     set_name: Rise of the True Dragons Structure Deck
     rarities:
     - Common
+  - set_number: AMDE-FR047
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   it:
   - set_number: SHSP-IT012
     set_name: Shadow Specters
@@ -79,6 +91,10 @@ sets:
     set_name: Rise of the True Dragons Structure Deck
     rarities:
     - Common
+  - set_number: AMDE-IT047
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   pt:
   - set_number: SHSP-PT012
     set_name: Shadow Specters
@@ -88,6 +104,10 @@ sets:
     set_name: Rise of the True Dragons Structure Deck
     rarities:
     - Common
+  - set_number: AMDE-PT047
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: SHSP-JP012
     set_name: Shadow Specters
