--- a/data/cards/52105192.yaml
+++ b/data/cards/52105192.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: AMDE-EN041
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   de:
   - set_number: SDWS-DE021
     set_name: Warriors' Strike Structure Deck
@@ -81,6 +85,10 @@ sets:
     - Common
   - set_number: GRCR-DE054
     set_name: The Grand Creators
+    rarities:
+    - Rare
+  - set_number: AMDE-DE041
+    set_name: Amazing Defenders
     rarities:
     - Rare
   fr:
@@ -104,6 +112,10 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: AMDE-FR041
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   it:
   - set_number: SDWS-IT021
     set_name: Warriors' Strike Structure Deck
@@ -125,6 +137,10 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: AMDE-IT041
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   pt:
   - set_number: AP01-PT012
     set_name: Astral Pack One
@@ -136,6 +152,10 @@ sets:
     - Super Rare
   - set_number: GRCR-PT054
     set_name: The Grand Creators
+    rarities:
+    - Rare
+  - set_number: AMDE-PT041
+    set_name: Amazing Defenders
     rarities:
     - Rare
   ja:
