--- a/data/cards/68688135.yaml
+++ b/data/cards/68688135.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드에 "뱀파이어" 몬스터가 존재하고, 몬스터의 효과 / 마법 / 함정 카드가 발동했을 때에 발동할 수 있다. 그 발동을 무효로 하고 파괴한다. 그 후, 파괴한 카드가 몬스터 카드였을 경우, 자신은 그 원래의 공격력만큼 LP를 회복한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1个回合只可发动1张。①：自己场上存在“吸血鬼”怪兽，在怪兽的效果・魔法・陷阱卡发动时可以发动。将该发动无效化并破坏。之后，破坏的卡是怪兽卡的情况下，自己恢复该卡原本攻击力数值的LP。
+    这个卡名的卡在1个回合只可发动1张。①：自己场上存在"吸血鬼"怪兽，在怪兽的效果・魔法・陷阱卡发动时可以发动。将该发动无效化并破坏。之后，破坏的卡是怪兽卡的情况下，自己恢复该卡原本攻击力数值的LP。
 card_type: Trap
 property: Counter
 series:
