--- a/data/cards/02295440.yaml
+++ b/data/cards/02295440.yaml
@@ -86,6 +86,11 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts'
     rarities:
     - Common
+  - set_number: AMDE-EN040
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
   de:
   - set_number: RGBT-DE045
     set_name: Raging Battle
@@ -132,6 +137,11 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts'
     rarities:
     - Common
+  - set_number: AMDE-DE040
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
   fr:
   - set_number: RGBT-FR045
     set_name: Raging Battle
@@ -178,6 +188,11 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts'
     rarities:
     - Common
+  - set_number: AMDE-FR040
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
   it:
   - set_number: RGBT-IT045
     set_name: Raging Battle
@@ -220,6 +235,11 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts'
     rarities:
     - Common
+  - set_number: AMDE-IT040
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
   pt:
   - set_number: SP13-PT050
     set_name: Star Pack 2013
@@ -250,6 +270,11 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts'
     rarities:
     - Common
+  - set_number: AMDE-PT040
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
   ja:
   - set_number: RGBT-JP045
     set_name: Raging Battle
