--- a/data/cards/06917479.yaml
+++ b/data/cards/06917479.yaml
@@ -32,7 +32,7 @@ text:
     ①: 1턴에 1번, 1000 LP를 지불하여, 상대 필드의 몬스터 1장과 이 카드 이외의 자신 필드의 "뱀파이어" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터 2장의 컨트롤을 맞바꾼다. ②: 이 카드가 전투로 몬스터를 파괴한 배틀 페이즈 종료시에 발동할 수 있다. 그 몬스터를 묘지에서 가능한 한 자신 필드에 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    ①：1个回合1次，支付1000LP，可以对手场上1只怪兽和这张卡以外的自己场上1只“吸血鬼”怪兽为对象发动。该2只怪兽的控制权交换。②：这张卡在通过战斗破坏怪兽的战斗阶段结束时可以发动。将该怪兽从墓地尽可能往自己场上进行特殊召唤。
+    ①：1个回合1次，支付1000LP，可以对手场上1只怪兽和这张卡以外的自己场上1只"吸血鬼"怪兽为对象发动。该2只怪兽的控制权交换。②：这张卡在通过战斗破坏怪兽的战斗阶段结束时可以发动。将该怪兽从墓地尽可能往自己场上进行特殊召唤。
 card_type: Monster
 monster_type_line: Zombie / Effect
 attribute: DARK
