--- a/data/cards/14212201.yaml
+++ b/data/cards/14212201.yaml
@@ -32,7 +32,7 @@ text:
     이 카드를 엑시즈 소환의 소재로 할 경우, 어둠 속성 몬스터의 엑시즈 소환으로밖에 사용할 수 없다. ①: 이 카드가 일반 소환에 성공했을 때에 발동할 수 있다. 패 / 덱에서 "섀도우 뱀파이어" 이외의 어둠 속성인 "뱀파이어" 몬스터 1장을 특수 소환한다. 이 효과로 특수 소환에 성공한 턴에, 그 몬스터 이외의 자신 몬스터는 공격할 수 없다.
   zh-TW:
   zh-CN: |-
-    把这张卡作为超量召唤的素材的情况下，只可用于暗属性怪兽的超量召唤。①：这张卡召唤成功时可以发动。从手牌・牌组特殊召唤“影子吸血鬼”以外的1只暗属性“吸血鬼”怪兽。用这个效果特殊召唤成功的回合，该怪兽以外的自己的怪兽不可攻击。
+    把这张卡作为超量召唤的素材的情况下，只可用于暗属性怪兽的超量召唤。①：这张卡召唤成功时可以发动。从手牌・牌组特殊召唤"影子吸血鬼"以外的1只暗属性"吸血鬼"怪兽。用这个效果特殊召唤成功的回合，该怪兽以外的自己的怪兽不可攻击。
 card_type: Monster
 monster_type_line: Zombie / Effect
 attribute: DARK
