--- a/data/cards/17255673.yaml
+++ b/data/cards/17255673.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 天御巫之阖
 text:
   en: |-
-    While you control a monster(s) equipped with an Equip Card, your opponent's monsters must attack them, if able. If your "Mikanko" monster battles, your opponent cannot activate cards or effects until the end of the Damage Step. If your "Mikanko" monster attacks, at the end of the Damage Step: You can send 1 Equip Card you control to the GY; that monster can make another attack on a monster in a row.
+    While you control a monster that is equipped with an Equip Card, all monsters your opponent controls that can attack must attack monsters equipped with Equip Cards. If your "Mikanko" monster battles, your opponent cannot activate cards or effects until the end of the Damage Step. At the end of the Damage Step, if your "Mikanko" monster attacked: You can send 1 Equip Card you control to the GY; it can make another attack on a monster in a row.
   de:
   es:
   fr:
@@ -38,6 +38,31 @@ images:
 - index: 1
   image: HeavenlyGateoftheMikanko-DBAD-JP-C.png
 sets:
+  en:
+  - set_number: AMDE-EN028
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  de:
+  - set_number: AMDE-DE028
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  fr:
+  - set_number: AMDE-FR028
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  it:
+  - set_number: AMDE-IT028
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
+  pt:
+  - set_number: AMDE-PT028
+    set_name: Amazing Defenders
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBAD-JP028
     set_name: 'Deck Build Pack: Amazing Defenders'
