--- a/data/cards/25123713.yaml
+++ b/data/cards/25123713.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우에 발동할 수 있다. 자신 필드의 "공아단" 몬스터의 종류의 수까지 상대의 묘지의 카드를 고르고 제외한다. ②: 이 카드가 몬스터 존에 존재하는 한, 상대는 다른 "공아단" 몬스터를 공격 대상으로 선택할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①的效果1个回合只可使用1次。①：这张卡特殊召唤成功的情况下可以发动。挑选张数最多为自己场上的“空牙团”怪兽种类数量的对手墓地的卡，将其除外。②：只要这张卡存在于怪兽区域，对手就不可选择其他的“空牙团”怪兽作为攻击对象。
+    这个卡名的①的效果1个回合只可使用1次。①：这张卡特殊召唤成功的情况下可以发动。挑选张数最多为自己场上的"空牙团"怪兽种类数量的对手墓地的卡，将其除外。②：只要这张卡存在于怪兽区域，对手就不可选择其他的"空牙团"怪兽作为攻击对象。
 card_type: Monster
 monster_type_line: Beast-Warrior / Effect
 attribute: EARTH
