--- a/data/cards/26077387.yaml
+++ b/data/cards/26077387.yaml
@@ -12,7 +12,7 @@ name:
   ko: 섬도희－레이
   ko_rr: Seomdohui - Rei
   zh-TW:
-  zh-CN: 闪刀姬-零
+  zh-CN: 闪刀姬－零
 text:
   en: |-
     (Quick Effect): You can Tribute this card; Special Summon 1 "Sky Striker Ace" monster from your Extra Deck to the Extra Monster Zone. While this card is in your GY, if a face-up "Sky Striker Ace" Link Monster you control is destroyed by battle, or leaves the field because of an opponent's card effect: You can Special Summon this card. You can only use each effect of "Sky Striker Ace - Raye" once per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 릴리스하고 발동할 수 있다. 엑스트라 덱에서 "섬도희" 몬스터 1장을 엑스트라 몬스터 존에 특수 소환한다. 이 효과는 상대 턴에도 발동할 수 있다. ②: 이 카드가 묘지에 존재하는 상태에서, 자신 필드의 앞면 표시의 "섬도희" 링크 몬스터가 상대 효과로 필드에서 벗어났을 경우, 또는 전투로 파괴되었을 경우에 발동할 수 있다. 이 카드를 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    此卡名的①②效果1回合仅可各使用1次。①：解放此卡可以发动。从额外牌组将1只“闪刀姬”怪兽特殊召唤至额外怪兽区域。此效果在对手回合中也可以发动。②：此卡存在于墓地的状态下，自己场上的表侧表示“闪刀姬”连接怪兽因对手的效果从场上离开的情况下，或因战斗被破坏的情况下可以发动。将此卡特殊召唤。
+    此卡名的①②效果1回合仅可各使用1次。①：解放此卡可以发动。从额外牌组将1只"闪刀姬"怪兽特殊召唤至额外怪兽区域。此效果在对手回合中也可以发动。②：此卡存在于墓地的状态下，自己场上的表侧表示"闪刀姬"连接怪兽因对手的效果从场上离开的情况下，或因战斗被破坏的情况下可以发动。将此卡特殊召唤。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: DARK
