--- a/data/cards/31034919.yaml
+++ b/data/cards/31034919.yaml
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 전투로 파괴되어 묘지로 보내졌을 경우에 발동한다. 패를 2장 골라 묘지로 보내고, 자신은 덱에서 2장 드로우한다.
   zh-TW:
   zh-CN: |-
-    ①：这张卡通过战斗被破坏并被送至墓地的情况下发动。挑选2张手牌送至墓地，自己从牌组抽2张。
+    ①：此卡因战斗被破坏并被送至墓地的情况下发动。挑选2张手牌送至墓地，自己从牌组抽2张。
 card_type: Monster
 monster_type_line: Fiend / Effect
 attribute: DARK
