--- a/data/cards/31189536.yaml
+++ b/data/cards/31189536.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 덱에서 "뱀파이어" 몬스터 1장을 특수 소환한다. 이 효과로 특수 소환한 몬스터는 이 턴의 엔드 페이즈에 파괴된다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1个回合只可发动1张。①：从牌组特殊召唤1只“吸血鬼”怪兽。用这个效果特殊召唤的怪兽将在这个回合的结束阶段被破坏。
+    这个卡名的卡在1个回合只可发动1张。①：从牌组特殊召唤1只"吸血鬼"怪兽。用这个效果特殊召唤的怪兽将在这个回合的结束阶段被破坏。
 card_type: Trap
 property: Normal
 series:
