--- a/data/cards/32086564.yaml
+++ b/data/cards/32086564.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Cosmo Blazer
     rarities:
     - Common
+  - set_number: AMDE-EN045
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   de:
   - set_number: CBLZ-DE077
     set_name: Cosmo Blazer
     rarities:
     - Common
+  - set_number: AMDE-DE045
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   fr:
   - set_number: CBLZ-FR077
     set_name: Cosmo Blazer
     rarities:
     - Common
+  - set_number: AMDE-FR045
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   it:
   - set_number: CBLZ-IT077
     set_name: Cosmo Blazer
     rarities:
     - Common
+  - set_number: AMDE-IT045
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   pt:
   - set_number: CBLZ-PT077
     set_name: Cosmo Blazer
     rarities:
     - Common
+  - set_number: AMDE-PT045
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: CBLZ-JP077
     set_name: Cosmo Blazer
