--- a/data/cards/32807846.yaml
+++ b/data/cards/32807846.yaml
@@ -159,6 +159,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: AMDE-EN039
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   - set_number: LOD-028
     set_name: Legacy of Darkness
     rarities:
@@ -278,6 +282,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: AMDE-DE039
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   fr:
   - set_number: DB2-FR147
     set_name: Dark Beginning 2
@@ -393,6 +401,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: AMDE-FR039
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   it:
   - set_number: DB2-IT147
     set_name: Dark Beginning 2
@@ -508,6 +520,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: AMDE-IT039
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   pt:
   - set_number: YS13-PT029
     set_name: 'Super Starter: V for Victory'
@@ -578,6 +594,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare (Pharaoh's Rare)
+  - set_number: AMDE-PT039
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: SC-28
     set_name: Struggle of Chaos
