--- a/data/cards/34250214.yaml
+++ b/data/cards/34250214.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우, 500 LP를 지불하고 발동할 수 있다. 덱에서 "뱀파이어의 사역마" 이외의 "뱀파이어" 몬스터 1장을 패에 넣는다. ②: 이 카드가 묘지에 존재할 경우, 패 및 자신 필드의 앞면 표시의 카드 중에서, "뱀파이어" 카드 1장을 묘지로 보내고 발동할 수 있다. 이 카드를 특수 소환한다. 이 효과로 특수 소환한 이 카드는, 필드에서 벗어났을 경우에 제외된다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1个回合各只可使用1次。①：这张卡特殊召唤成功的情况下，支付500LP可以发动。从牌组把“吸血鬼的使役魔”以外的1只“吸血鬼”怪兽加入手牌。②：这张卡存在于墓地的情况下，从手牌以及自己场上的表侧表示的卡之中将1张“吸血鬼”卡送至墓地后可以发动。特殊召唤这张卡。用这个效果特殊召唤的这张卡在从场上离开的情况下将被除外。
+    这个卡名的①②的效果1个回合各只可使用1次。①：这张卡特殊召唤成功的情况下，支付500LP可以发动。从牌组把"吸血鬼的使役魔"以外的1只"吸血鬼"怪兽加入手牌。②：这张卡存在于墓地的情况下，从手牌以及自己场上的表侧表示的卡之中将1张"吸血鬼"卡送至墓地后可以发动。特殊召唤这张卡。用这个效果特殊召唤的这张卡在从场上离开的情况下将被除外。
 card_type: Monster
 monster_type_line: Zombie / Effect
 attribute: DARK
