--- a/data/cards/37890974.yaml
+++ b/data/cards/37890974.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ① : 자신 필드의 "공아단" 몬스터가, 전투 또는 상대의 효과로 파괴되었을 경우, 그 몬스터 1장을 대상으로 하고 발동할 수 있다. 덱에서 그 몬스터의 원래의 레벨보다 낮은 레벨을 가진 "공아단" 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①的效果1个回合只可使用1次。①：自己场上的“空牙团”怪兽通过战斗或者对手的效果被破坏的情况下，可以1只该怪兽为对象发动。从牌组特殊召唤比该怪兽的原本等级低的1只“空牙团”怪兽。
+    这个卡名的①的效果1个回合只可使用1次。①：自己场上的"空牙团"怪兽通过战斗或者对手的效果被破坏的情况下，可以1只该怪兽为对象发动。从牌组特殊召唤比该怪兽的原本等级低的1只"空牙团"怪兽。
 card_type: Trap
 property: Continuous
 series:
