--- a/data/cards/38250531.yaml
+++ b/data/cards/38250531.yaml
@@ -12,7 +12,7 @@ name:
   ko: 에델리터-뱀파이어 브람
   ko_rr:
   zh-TW:
-  zh-CN: 红贵士－吸血鬼·布莱姆
+  zh-CN: 红贵士－吸血鬼・布莱姆
 text:
   en: |-
     2 Level 5 Zombie monsters
