--- a/data/cards/38916526.yaml
+++ b/data/cards/38916526.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우에 발동할 수 있다. "공아단의 영웅 라팔" 이외의 자신 필드의 "공아단" 몬스터의 종류의 수만큼 자신의 덱 위에서 카드를 넘긴다. 그 중의 카드 1장을 골라 패에 넣고, 나머지 카드는 덱으로 되돌린다. ②: 상대가 몬스터의 효과를 발동했을 때, 패에서 "공아단" 카드 1장을 버리고 발동할 수 있다. 그 발동을 무효로 한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1个回合各只可使用1次。①：这张卡特殊召唤成功的情况下可以发动。把“空牙团的英雄 拉法尔”以外的自己场上的“空牙团”怪兽种类数量的卡从自己牌组上面翻开。挑选其中的1张加入手牌，剩下的卡放回牌组。②：对手怪兽的效果发动时，从手牌扔掉1张“空牙团”卡后可以发动。将该发动无效化。
+    这个卡名的①②的效果1个回合各只可使用1次。①：这张卡特殊召唤成功的情况下可以发动。把"空牙团的英雄 拉法尔"以外的自己场上的"空牙团"怪兽种类数量的卡从自己牌组上面翻开。挑选其中的1张加入手牌，剩下的卡放回牌组。②：对手怪兽的效果发动时，从手牌扔掉1张"空牙团"卡后可以发动。将该发动无效化。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: LIGHT
