--- a/data/cards/41927278.yaml
+++ b/data/cards/41927278.yaml
@@ -44,26 +44,46 @@ sets:
     set_name: Ignition Assault
     rarities:
     - Common
+  - set_number: AMDE-EN043
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   de:
   - set_number: IGAS-DE068
     set_name: Ignition Assault
     rarities:
     - Common
+  - set_number: AMDE-DE043
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   fr:
   - set_number: IGAS-FR068
     set_name: Ignition Assault
     rarities:
     - Common
+  - set_number: AMDE-FR043
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   it:
   - set_number: IGAS-IT068
     set_name: Ignition Assault
     rarities:
     - Common
+  - set_number: AMDE-IT043
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   pt:
   - set_number: IGAS-PT068
     set_name: Ignition Assault
     rarities:
     - Common
+  - set_number: AMDE-PT043
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: IGAS-JP068
     set_name: Ignition Assault
