--- a/data/cards/50005218.yaml
+++ b/data/cards/50005218.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드 이외의 자신 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 자신의 덱 위에서 카드를 3장 넘긴다. 그 중에서 "섬도" 카드 1장을 고르고 패에 넣을 수 있다. 남은 카드는 덱으로 되돌린다. "섬도" 카드가 넘겨졌을 경우, 추가로 대상의 카드를 묘지로 보낸다. ②: 이 카드가 효과로 필드 존에서 묘지로 보내졌을 경우에 발동할 수 있다. 덱에서 "섬도희" 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1个回合各只可使用1次。①：可以这张卡以外的自己场上的1张卡为对象发动。从自己牌组上面把3张卡翻开。可以从其中挑选1张“闪刀”卡加入手牌。剩下的卡放回牌组。“闪刀”卡被翻开的情况下，进而把作为对象的卡送至墓地。②：这张卡被效果从场地区域送至墓地的情况下可以发动。从牌组对1只“闪刀姬”怪兽进行特殊召唤。
+    这个卡名的①②的效果1个回合各只可使用1次。①：可以这张卡以外的自己场上的1张卡为对象发动。从自己牌组上面把3张卡翻开。可以从其中挑选1张"闪刀"卡加入手牌。剩下的卡放回牌组。"闪刀"卡被翻开的情况下，进而把作为对象的卡送至墓地。②：这张卡被效果从场地区域送至墓地的情况下可以发动。从牌组对1只"闪刀姬"怪兽进行特殊召唤。
 card_type: Spell
 property: Field
 series:
