--- a/data/cards/56824871.yaml
+++ b/data/cards/56824871.yaml
@@ -51,26 +51,51 @@ sets:
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
+  - set_number: AMDE-EN038
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
   de:
   - set_number: TOCH-DE011
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
+  - set_number: AMDE-DE038
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
   fr:
   - set_number: TOCH-FR011
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
+  - set_number: AMDE-FR038
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
   it:
   - set_number: TOCH-IT011
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
+  - set_number: AMDE-IT038
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
   pt:
   - set_number: TOCH-PT011
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
+  - set_number: AMDE-PT038
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
   ja:
   - set_number: VJMP-JP174
     set_name: V Jump February 2020 promotional card
