--- a/data/cards/66740005.yaml
+++ b/data/cards/66740005.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ① : 자신 메인 페이즈에 발동할 수 있다. 패에서 "공아단의 투사 브라보" 이외의 "공아단" 몬스터 1장을 특수 소환한다. ②: 이 카드가 이미 몬스터 존에 존재하는 상태에, 자신 필드에 이 카드 이외의 "공아단" 몬스터가 특수 소환 되었을 경우에 발동할 수 있다. 필드의 모든 "공아단" 몬스터의 공격력 / 수비력은 턴 종료시까지 500 올린다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1个回合各只可使用1次。①：自己主要阶段可以发动。从手牌特殊召唤“空牙团的斗士 布拉沃”以外的1只“空牙团”怪兽。②：这张卡已存在于怪兽区域的状态下，且这张卡以外的“空牙团”怪兽被特殊召唤至自己场上的情况下可以发动。场上所有“空牙团”怪兽的攻击力・守备力到回合结束时为止上升500。
+    这个卡名的①②的效果1个回合各只可使用1次。①：自己主要阶段可以发动。从手牌特殊召唤"空牙团的斗士 布拉沃"以外的1只"空牙团"怪兽。②：这张卡已存在于怪兽区域的状态下，且这张卡以外的"空牙团"怪兽被特殊召唤至自己场上的情况下可以发动。场上所有"空牙团"怪兽的攻击力・守备力到回合结束时为止上升500。
 card_type: Monster
 monster_type_line: Reptile / Effect
 attribute: FIRE
