--- a/data/cards/69700783.yaml
+++ b/data/cards/69700783.yaml
@@ -51,7 +51,8 @@ text:
   zh-TW:
   zh-CN: |-
     这个卡名的卡在1个回合只可发动1张。①：可以从以下效果选择1个发动。
-    ●可以自己场上1只表侧表示怪兽为对象发动。将持有与该怪兽不同等级的1只“吸血鬼”怪兽从牌组送至墓地。作为对象的怪兽的等级直到回合结束时为止变成和送至墓地的怪兽相同。●可以自己墓地1只“吸血鬼”怪兽为对象发动。挑选自己场上的1只怪兽送至墓地，特殊召唤作为对象的怪兽。
+    ●可以自己场上1只表侧表示怪兽为对象发动。将持有与该怪兽不同等级的1只"吸血鬼"怪兽从牌组送至墓地。作为对象的怪兽的等级直到回合结束时为止变成和送至墓地的怪兽相同。
+    ●可以自己墓地1只"吸血鬼"怪兽为对象发动。挑选自己场上的1只怪兽送至墓地，特殊召唤作为对象的怪兽。
 card_type: Spell
 property: Normal
 series:
