--- a/data/cards/79523365.yaml
+++ b/data/cards/79523365.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우, 1000 LP를 지불하여, "뱀파이어 스커지레트" 이외의 자신의 묘지의 "뱀파이어" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 카드를 특수 소환한다. 이 효과로 특수 소환한 몬스터는, 이 턴, 공격할 수 없다. ②: 이 카드가 전투로 몬스터를 파괴한 배틀 페이즈 종료시에 발동할 수 있다. 그 몬스터를 묘지에서 가능한 한 자신 필드에 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①的效果1个回合只可使用1次。①：这张卡召唤・特殊召唤成功的情况下，支付1000LP，可以“吸血鬼猩红灾星”以外的自己墓地1只“吸血鬼”怪兽为对象发动。特殊召唤该怪兽。用这个效果特殊召唤的怪兽在这个回合不可攻击。②：这张卡在通过战斗破坏怪兽的战斗阶段结束时可以发动。将该怪兽从墓地尽可能往自己场上进行特殊召唤。
+    这个卡名的①的效果1个回合只可使用1次。①：这张卡召唤・特殊召唤成功的情况下，支付1000LP，可以"吸血鬼猩红灾星"以外的自己墓地1只"吸血鬼"怪兽为对象发动。特殊召唤该怪兽。用这个效果特殊召唤的怪兽在这个回合不可攻击。②：这张卡在通过战斗破坏怪兽的战斗阶段结束时可以发动。将该怪兽从墓地尽可能往自己场上进行特殊召唤。
 card_type: Monster
 monster_type_line: Zombie / Effect
 attribute: DARK
