--- a/data/cards/85087012.yaml
+++ b/data/cards/85087012.yaml
@@ -111,6 +111,11 @@ sets:
     set_name: 'Hidden Arsenal: Chapter 1'
     rarities:
     - Duel Terminal Ultra Parallel Rare
+  - set_number: AMDE-EN046
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+    - Collector's Rare
   - set_number: DLG1-EN107
     set_name: Dark Legends
     rarities:
@@ -187,6 +192,11 @@ sets:
     set_name: 'Hidden Arsenal: Chapter 1'
     rarities:
     - Duel Terminal Ultra Parallel Rare
+  - set_number: AMDE-DE046
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+    - Collector's Rare
   fr:
   - set_number: DP03-FR009
     set_name: 'Duelist Pack: Jaden Yuki 2'
@@ -251,6 +261,11 @@ sets:
     set_name: 'Hidden Arsenal: Chapter 1'
     rarities:
     - Duel Terminal Ultra Parallel Rare
+  - set_number: AMDE-FR046
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+    - Collector's Rare
   it:
   - set_number: DP03-IT009
     set_name: 'Duelist Pack: Jaden Yuki 2'
@@ -319,6 +334,11 @@ sets:
     set_name: 'Hidden Arsenal: Chapter 1'
     rarities:
     - Duel Terminal Ultra Parallel Rare
+  - set_number: AMDE-IT046
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+    - Collector's Rare
   pt:
   - set_number: BP02-PT048
     set_name: 'Battle Pack 2: War of the Giants'
@@ -366,6 +386,11 @@ sets:
     set_name: 'Hidden Arsenal: Chapter 1'
     rarities:
     - Duel Terminal Ultra Parallel Rare
+  - set_number: AMDE-PT046
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+    - Collector's Rare
   ja:
   - set_number: DP03-JP009
     set_name: 'Duelist Pack: Jaden Yuki 2'
