--- a/data/cards/91405870.yaml
+++ b/data/cards/91405870.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장 밖에 발동할 수 없다. ①: 자신 묘지의 "공아단" 몬스터 1장을 대상으로 발동할 수 있다. 그 몬스터를 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡1个回合只可发动1张。①：可以自己墓地的1只“空牙团”怪兽为对象发动。以守备表示形式特殊召唤该怪兽。
+    这个卡名的卡1个回合只可发动1张。①：可以自己墓地的1只"空牙团"怪兽为对象发动。以守备表示形式特殊召唤该怪兽。
 card_type: Spell
 property: Quick-Play
 series:
