--- a/data/cards/93850652.yaml
+++ b/data/cards/93850652.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 패에서 "공아단의 검사 비트" 이외의 "공아단" 몬스터 1장을 특수 소환한다. ②: 이 카드가 이미 몬스터 존에 존재하는 상태에서, 자신 필드에 이 카드 이외의 "공아단" 몬스터가 특수 소환되었을 경우에 발동할 수 있다. 덱에서 "공아단의 검사 비트" 이외의 "공아단" 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1个回合各只可使用1次。①：自己主要阶段可以发动。从手牌特殊召唤“空牙团的剑士 比特”以外的1只“空牙团”怪兽。②：这张卡已存在于怪兽区域的状态下，且这张卡以外的“空牙团”怪兽被特殊召唤至自己场上的情况下可以发动。从牌组将“空牙团的剑士 比特”以外的1只“空牙团”怪兽加入手牌。
+    这个卡名的①②的效果1个回合各只可使用1次。①：自己主要阶段可以发动。从手牌特殊召唤"空牙团的剑士 比特"以外的1只"空牙团"怪兽。②：这张卡已存在于怪兽区域的状态下，且这张卡以外的"空牙团"怪兽被特殊召唤至自己场上的情况下可以发动。从牌组将"空牙团的剑士 比特"以外的1只"空牙团"怪兽加入手牌。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: EARTH
