--- a/data/cards/96399967.yaml
+++ b/data/cards/96399967.yaml
@@ -56,6 +56,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
+  - set_number: AMDE-EN037
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   de:
   - set_number: DAMA-DE016
     set_name: Dawn of Majesty
@@ -65,6 +69,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
+  - set_number: AMDE-DE037
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   fr:
   - set_number: DAMA-FR016
     set_name: Dawn of Majesty
@@ -74,6 +82,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
+  - set_number: AMDE-FR037
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   it:
   - set_number: DAMA-IT016
     set_name: Dawn of Majesty
@@ -83,6 +95,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
+  - set_number: AMDE-IT037
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   pt:
   - set_number: DAMA-PT016
     set_name: Dawn of Majesty
@@ -92,6 +108,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
+  - set_number: AMDE-PT037
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: DAMA-JP016
     set_name: Dawn of Majesty
