--- a/data/cards/23171610.yaml
+++ b/data/cards/23171610.yaml
@@ -112,6 +112,10 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Common
+  - set_number: AMDE-EN053
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   - set_number: PSV-064
     set_name: Pharaoh's Servant
     rarities:
@@ -197,6 +201,10 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Common
+  - set_number: AMDE-DE053
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   fr:
   - set_number: SDP-F064
     set_name: Pharaoh's Servant
@@ -266,6 +274,10 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Common
+  - set_number: AMDE-FR053
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   it:
   - set_number: SDF-I064
     set_name: Pharaoh's Servant
@@ -335,6 +347,10 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Common
+  - set_number: AMDE-IT053
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   pt:
   - set_number: DL16-PT013
     set_name: Duelist League 16 participation cards
@@ -376,6 +392,10 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Common
+  - set_number: AMDE-PT053
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: TB-14
     set_name: Thousand Eyes Bible
