--- a/data/cards/24793135.yaml
+++ b/data/cards/24793135.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Rare
+  - set_number: AMDE-EN058
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   de:
   - set_number: DAMA-DE060
     set_name: Dawn of Majesty
@@ -60,6 +64,10 @@ sets:
     - Secret Rare
   - set_number: MP22-DE160
     set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
+  - set_number: AMDE-DE058
+    set_name: Amazing Defenders
     rarities:
     - Rare
   fr:
@@ -71,6 +79,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Rare
+  - set_number: AMDE-FR058
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   it:
   - set_number: DAMA-IT060
     set_name: Dawn of Majesty
@@ -80,6 +92,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Rare
+  - set_number: AMDE-IT058
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   pt:
   - set_number: DAMA-PT060
     set_name: Dawn of Majesty
@@ -87,6 +103,10 @@ sets:
     - Secret Rare
   - set_number: MP22-PT160
     set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Rare
+  - set_number: AMDE-PT058
+    set_name: Amazing Defenders
     rarities:
     - Rare
   ja:
