--- a/data/cards/27068117.yaml
+++ b/data/cards/27068117.yaml
@@ -46,21 +46,42 @@ sets:
     set_name: Return of the Duelist
     rarities:
     - Common
+  - set_number: AMDE-EN056
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
   de:
   - set_number: REDU-DE052
     set_name: Return of the Duelist
     rarities:
     - Common
+  - set_number: AMDE-DE056
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
   fr:
   - set_number: REDU-FR052
     set_name: Return of the Duelist
     rarities:
     - Common
+  - set_number: AMDE-FR056
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
   it:
   - set_number: REDU-IT052
     set_name: Return of the Duelist
     rarities:
     - Common
+  - set_number: AMDE-IT056
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: AMDE-PT056
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
   ja:
   - set_number: REDU-JP052
     set_name: Return of the Duelist
