--- a/data/cards/04810828.yaml
+++ b/data/cards/04810828.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: AMDE-EN051
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   de:
   - set_number: INOV-DE037
     set_name: 'Invasion: Vengeance'
@@ -62,6 +66,10 @@ sets:
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: AMDE-DE051
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   fr:
   - set_number: INOV-FR037
     set_name: 'Invasion: Vengeance'
@@ -71,6 +79,10 @@ sets:
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: AMDE-FR051
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   it:
   - set_number: INOV-IT037
     set_name: 'Invasion: Vengeance'
@@ -80,6 +92,10 @@ sets:
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: AMDE-IT051
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   pt:
   - set_number: INOV-PT037
     set_name: 'Invasion: Vengeance'
@@ -89,6 +105,10 @@ sets:
     set_name: Duel Overload
     rarities:
     - Ultra Rare
+  - set_number: AMDE-PT051
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: INOV-JP037
     set_name: 'Invasion: Vengeance'
