--- a/data/cards/22091647.yaml
+++ b/data/cards/22091647.yaml
@@ -54,30 +54,50 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: AMDE-EN049
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
   de:
   - set_number: TOCH-DE012
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: AMDE-DE049
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
   fr:
   - set_number: TOCH-FR012
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: AMDE-FR049
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
   it:
   - set_number: TOCH-IT012
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: AMDE-IT049
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
   pt:
   - set_number: TOCH-PT012
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: AMDE-PT049
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
   ja:
   - set_number: SR09-JP001
     set_name: "Structure Deck R: Warriors' Strike"
