--- a/data/cards/26708437.yaml
+++ b/data/cards/26708437.yaml
@@ -50,6 +50,10 @@ sets:
     set_name: Wing Raiders
     rarities:
     - Super Rare
+  - set_number: AMDE-EN060
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   de:
   - set_number: ORCS-DE076
     set_name: Order of Chaos
@@ -59,6 +63,10 @@ sets:
     set_name: Wing Raiders
     rarities:
     - Super Rare
+  - set_number: AMDE-DE060
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   fr:
   - set_number: ORCS-FR076
     set_name: Order of Chaos
@@ -68,6 +76,10 @@ sets:
     set_name: Wing Raiders
     rarities:
     - Super Rare
+  - set_number: AMDE-FR060
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   it:
   - set_number: ORCS-IT076
     set_name: Order of Chaos
@@ -77,11 +89,19 @@ sets:
     set_name: Wing Raiders
     rarities:
     - Super Rare
+  - set_number: AMDE-IT060
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   pt:
   - set_number: WIRA-PT060
     set_name: Wing Raiders
     rarities:
     - Super Rare
+  - set_number: AMDE-PT060
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: ORCS-JP076
     set_name: Order of Chaos
