--- a/data/cards/37626500.yaml
+++ b/data/cards/37626500.yaml
@@ -52,6 +52,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Ultra Rare
+  - set_number: AMDE-EN057
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   de:
   - set_number: INOV-DE064
     set_name: 'Invasion: Vengeance'
@@ -65,6 +69,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Ultra Rare
+  - set_number: AMDE-DE057
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   fr:
   - set_number: INOV-FR064
     set_name: 'Invasion: Vengeance'
@@ -78,6 +86,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Ultra Rare
+  - set_number: AMDE-FR057
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   it:
   - set_number: INOV-IT064
     set_name: 'Invasion: Vengeance'
@@ -91,6 +103,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Ultra Rare
+  - set_number: AMDE-IT057
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   pt:
   - set_number: INOV-PT064
     set_name: 'Invasion: Vengeance'
@@ -104,6 +120,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Ultra Rare
+  - set_number: AMDE-PT057
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: INOV-JP064
     set_name: 'Invasion: Vengeance'
