--- a/data/cards/59934749.yaml
+++ b/data/cards/59934749.yaml
@@ -64,6 +64,11 @@ sets:
     set_name: Soul Fusion Special Edition
     rarities:
     - Super Rare
+  - set_number: AMDE-EN052
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
   de:
   - set_number: EXFO-DE094
     set_name: Extreme Force
@@ -73,6 +78,11 @@ sets:
     set_name: Soul Fusion Special Edition
     rarities:
     - Super Rare
+  - set_number: AMDE-DE052
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
   fr:
   - set_number: EXFO-FR094
     set_name: Extreme Force
@@ -82,6 +92,11 @@ sets:
     set_name: Soul Fusion Special Edition
     rarities:
     - Super Rare
+  - set_number: AMDE-FR052
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
   it:
   - set_number: EXFO-IT094
     set_name: Extreme Force
@@ -91,6 +106,11 @@ sets:
     set_name: Soul Fusion Special Edition
     rarities:
     - Super Rare
+  - set_number: AMDE-IT052
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
   pt:
   - set_number: EXFO-PT094
     set_name: Extreme Force
@@ -100,6 +120,11 @@ sets:
     set_name: Soul Fusion Special Edition
     rarities:
     - Super Rare
+  - set_number: AMDE-PT052
+    set_name: Amazing Defenders
+    rarities:
+    - Super Rare
+    - Collector's Rare
   ja:
   - set_number: LVP1-JP051
     set_name: LINK VRAINS Pack
