--- a/data/cards/63995093.yaml
+++ b/data/cards/63995093.yaml
@@ -82,6 +82,10 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Common
+  - set_number: AMDE-EN054
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   de:
   - set_number: RDS-DE041
     set_name: Rise of Destiny
@@ -124,6 +128,10 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Common
+  - set_number: AMDE-DE054
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   fr:
   - set_number: RDS-FR041
     set_name: Rise of Destiny
@@ -166,6 +174,10 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Common
+  - set_number: AMDE-FR054
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   it:
   - set_number: RDS-IT041
     set_name: Rise of Destiny
@@ -208,6 +220,10 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Common
+  - set_number: AMDE-IT054
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   pt:
   - set_number: RDS-PT041
     set_name: Rise of Destiny
@@ -234,6 +250,10 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Common
+  - set_number: AMDE-PT054
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: RDS-JP041
     set_name: Rise of Destiny
