--- a/data/cards/71197066.yaml
+++ b/data/cards/71197066.yaml
@@ -58,6 +58,11 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Common
+  - set_number: AMDE-EN048
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+    - Collector's Rare
   de:
   - set_number: RIRA-DE029
     set_name: Rising Rampage
@@ -71,6 +76,11 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Common
+  - set_number: AMDE-DE048
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+    - Collector's Rare
   fr:
   - set_number: RIRA-FR029
     set_name: Rising Rampage
@@ -84,6 +94,11 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Common
+  - set_number: AMDE-FR048
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+    - Collector's Rare
   it:
   - set_number: RIRA-IT029
     set_name: Rising Rampage
@@ -97,6 +112,11 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Common
+  - set_number: AMDE-IT048
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+    - Collector's Rare
   pt:
   - set_number: RIRA-PT029
     set_name: Rising Rampage
@@ -110,6 +130,11 @@ sets:
     set_name: 'Structure Deck: Cyber Strike'
     rarities:
     - Common
+  - set_number: AMDE-PT048
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
+    - Collector's Rare
   ja:
   - set_number: RIRA-JP029
     set_name: Rising Rampage
