--- a/data/cards/81570454.yaml
+++ b/data/cards/81570454.yaml
@@ -54,26 +54,46 @@ sets:
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
+  - set_number: AMDE-EN050
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   de:
   - set_number: TOCH-DE014
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
+  - set_number: AMDE-DE050
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   fr:
   - set_number: TOCH-FR014
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
+  - set_number: AMDE-FR050
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   it:
   - set_number: TOCH-IT014
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
+  - set_number: AMDE-IT050
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   pt:
   - set_number: TOCH-PT014
     set_name: Toon Chaos
     rarities:
     - Ultra Rare
+  - set_number: AMDE-PT050
+    set_name: Amazing Defenders
+    rarities:
+    - Rare
   ja:
   - set_number: SR09-JP003
     set_name: "Structure Deck R: Warriors' Strike"
