--- a/data/cards/18094166.yaml
+++ b/data/cards/18094166.yaml
@@ -97,6 +97,15 @@ sets:
     rarities:
     - Ultra Rare
     - Collectors Rare
+  - set_number: RC04-JP004
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: CP19-KR010
     set_name: 'Collection Pack: Duelist of Revolution Version'
