--- a/data/cards/77235086.yaml
+++ b/data/cards/77235086.yaml
@@ -211,6 +211,15 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  - set_number: RC04-JP025
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: CPF1-KR012
     set_name: 'Collectors Pack: Duelist of Flash Version'
