--- a/data/cards/97268402.yaml
+++ b/data/cards/97268402.yaml
@@ -396,6 +396,15 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  - set_number: RC04-JP003
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: DREV-KR002
     set_name: Duelist Revolution
