--- a/data/cards/kdb11927.yaml
+++ b/data/cards/kdb11927.yaml
@@ -147,6 +147,15 @@ sets:
     rarities:
     - Millennium Ultra Rare
     - Ultimate Rare
+  - set_number: RC04-JP008
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: DP16-KR001
     set_name: 'Duelist Pack: Battle City'
