--- a/data/cards/00102380.yaml
+++ b/data/cards/00102380.yaml
@@ -277,6 +277,15 @@ sets:
     set_name: Duel Royale Deck Set EX Round 2
     rarities:
     - Common
+  - set_number: RC04-JP001
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: PGD-KR107
     set_name: Pharaonic Guardian
