--- a/data/cards/64202399.yaml
+++ b/data/cards/64202399.yaml
@@ -99,6 +99,15 @@ sets:
     set_name: Legendary Gold Box
     rarities:
     - 20th Secret Rare
+  - set_number: RC04-JP017
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: LGB1-KR005
     set_name: Legendary Gold Set
