--- a/data/cards/67934141.yaml
+++ b/data/cards/67934141.yaml
@@ -5,7 +5,7 @@ name:
   de: Ultimatives Baseballkind
   es: Niño Baseball Definitivo
   fr: Gosse Suprême du Base-ball
-  it: Giovane Promessa del Baseballa
+  it: Giovane Promessa del Baseball
   pt: Rapaz de Baseball Derradeiro
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>熱<rt>ねっ</rt></ruby><ruby>血<rt>けつ</rt></ruby><ruby>球<rt>きゅう</rt></ruby><ruby>児<rt>じ</rt></ruby>
   ja_romaji: Chōnekketsu Kyūji
