--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -2095,7 +2095,7 @@ Dinomorphia:
   ja: ダイノルフィア
   ja_romaji: Dainorufia
   ko: 다이놀피어
-  ko_rr:
+  ko_rr: Dainolpieo
   zh-TW:
   zh-CN:
 Empowered Warrior:
