--- a/data/cards/58607704.yaml
+++ b/data/cards/58607704.yaml
@@ -37,10 +37,10 @@ property: Normal
 images:
 - index: 1
   image: '  FiendsHandMirror-EE2-JP-C.jpg'
-  illustration: '   FiendsHandMirror-TF04-JP-VG.jpg'
+  illustration: '   FiendsHandMirror-TF05-JP-VG-artwork.png'
 - index: '1.1'
   image: FiendsHandMirror-DR2-EN-C-UE.png
-  illustration: FiendsHandMirror-TF04-EN-VG.jpg
+  illustration: FiendsHandMirror-TF04-EN-VG-artwork.png
 sets:
   en:
   - set_number: DR2-EN103
