--- a/data/cards/84257639.yaml
+++ b/data/cards/84257639.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Aumente seus Pontos de Vida em 1000 pontos.
   ja: |-
-    ①：自分は１０００LP回復する。
+    ①：自分は１０００ＬＰ回復する。
   ko: |-
     자신은 라이프 포인트를 1000 포인트 회복한다.
   zh-TW: |-
