--- a/data/rush/18446.yaml
+++ b/data/rush/18446.yaml
@@ -46,7 +46,7 @@ atk: 300
 def: 1300
 images:
 - index: 1
-  image: StarTriLeo-RDRLP2-JP-OP.png
+  image: StarTriLeo-RDRLP2-JP-UR.png
 sets:
   ja:
   - set_number: RD/RLP2-JP001
