--- a/data/cards/03606728.yaml
+++ b/data/cards/03606728.yaml
@@ -49,7 +49,11 @@ series:
 - Gagaga
 images:
 - index: 1
+  image: '  GagagaGirl-SD42-JP-C.png   '
+  illustration: GagagaGirl-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: GagagaGirl-YS13-EN-C-1E.png
+  illustration: GagagaGirl-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: ORCS-EN003
