--- a/data/cards/06511113.yaml
+++ b/data/cards/06511113.yaml
@@ -53,7 +53,11 @@ series:
 - Traptrix
 images:
 - index: 1
+  image: '  TraptrixRafflesia-SD45-JP-NPR.png   '
+  illustration: TraptrixRafflesia-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: TraptrixRafflesia-OP13-EN-UtR-UE.png
+  illustration: TraptrixRafflesia-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: BOSH-EN099
