--- a/data/cards/20745268.yaml
+++ b/data/cards/20745268.yaml
@@ -40,10 +40,10 @@ series:
 images:
 - index: 1
   image: '  MagicalMusketDesperado-LVP2-JP-C.png'
-  illustration: '    MagicalMusketDesperado-LOD2-JP-VG-artwork.png'
+  illustration: '    MagicalMusketDesperado-MADU-JP-VG-artwork.png'
 - index: '1.1'
   image: MagicalMusketDesperado-SPWA-EN-SR-1E.png
-  illustration: MagicalMusketDesperado-LOD2-EN-VG-artwork.jpg
+  illustration: MagicalMusketDesperado-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: SPWA-EN025
