--- a/data/cards/21831848.yaml
+++ b/data/cards/21831848.yaml
@@ -40,7 +40,11 @@ series:
 - Gagaga
 images:
 - index: 1
+  image: '  Gagagadraw-CBLZ-JP-R.png    '
+  illustration: Gagagadraw-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: Gagagadraw-CBLZ-EN-SR-1E.png
+  illustration: Gagagadraw-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: CBLZ-EN055
