--- a/data/cards/23848752.yaml
+++ b/data/cards/23848752.yaml
@@ -54,7 +54,11 @@ series:
 - Heroic Champion
 images:
 - index: 1
+  image: '  HeroicChampionJarngreipr-DIFO-JP-C.png   '
+  illustration: HeroicChampionJarngreipr-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: HeroicChampionJarngreipr-DIFO-EN-C-1E.png
+  illustration: HeroicChampionJarngreipr-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DIFO-EN045
