--- a/data/cards/50608164.yaml
+++ b/data/cards/50608164.yaml
@@ -44,7 +44,11 @@ series:
 - Masked HERO
 images:
 - index: 1
+  image: '  MaskedHEROKoga-SD27-JP-SR.png  '
+  illustration: MaskedHEROKoga-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: MaskedHEROKoga-AP08-EN-C-UE.png
+  illustration: MaskedHEROKoga-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: SDHS-EN042
