--- a/data/cards/60666820.yaml
+++ b/data/cards/60666820.yaml
@@ -44,10 +44,10 @@ series:
 images:
 - index: 1
   image: '  NefariousArchfiendEaterofNefariousness-SD39-JP-C.png'
-  illustration: '   NefariousArchfiendEaterofNefariousness-LOD2-JP-VG-artwork.png'
+  illustration: '   NefariousArchfiendEaterofNefariousness-MADU-JP-VG-artwork.png'
 - index: '1.1'
   image: NefariousArchfiendEaterofNefariousness-SDCH-EN-C-1E.png
-  illustration: NefariousArchfiendEaterofNefariousness-LOD2-EN-VG-artwork.jpg
+  illustration: NefariousArchfiendEaterofNefariousness-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DUEA-EN035
