--- a/data/cards/68024506.yaml
+++ b/data/cards/68024506.yaml
@@ -44,10 +44,10 @@ series:
 images:
 - index: 1
   image: '  MagicalMusketeerCalamity-DBSW-JP-NPR.png'
-  illustration: '  MagicalMusketeerCalamity-LOD2-JP-VG-artwork.png'
+  illustration: '  MagicalMusketeerCalamity-MADU-JP-VG-artwork.png'
 - index: '1.1'
   image: MagicalMusketeerCalamity-SPWA-EN-SR-1E.png
-  illustration: MagicalMusketeerCalamity-LOD2-EN-VG-artwork.jpg
+  illustration: MagicalMusketeerCalamity-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: SPWA-EN020
