--- a/data/cards/80101899.yaml
+++ b/data/cards/80101899.yaml
@@ -37,7 +37,11 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
+  image: '  TrapTrick-SD45-JP-C.png   '
+  illustration: TrapTrick-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: TrapTrick-TAMA-EN-R-1E.png
+  illustration: TrapTrick-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: SOFU-EN078
