--- a/data/rush/yugipedia921247.yaml
+++ b/data/rush/yugipedia921247.yaml
@@ -1,6 +1,6 @@
 konami_id:
 name:
-  en: The☆Dragiastar
+  en: The Dragiastar
   de:
   es:
   fr:
@@ -47,7 +47,7 @@ atk: 3300
 def: 2500
 materials:
   en: |-
-    "The☆Dragias" + "The☆Dragias"
+    "The Dragias" + "The Dragias"
   de:
   es:
   fr:
@@ -58,7 +58,7 @@ materials:
   zh-TW:
   zh-CN:
 series:
-- The☆
+- The
 images:
 - index: 1
   image: TheDragiastar-RDKP12-JP-OP.png
