--- a/data/cards/29649320.yaml
+++ b/data/cards/29649320.yaml
@@ -37,7 +37,11 @@ card_type: Trap
 property: Continuous
 images:
 - index: 1
+  image: '  MirrorForceLauncher-SD36-JP-C.png   '
+  illustration: MirrorForceLauncher-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: MirrorForceLauncher-MP19-EN-R-1E.png
+  illustration: MirrorForceLauncher-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: CYHO-EN069
