--- a/data/cards/31629407.yaml
+++ b/data/cards/31629407.yaml
@@ -44,10 +44,10 @@ series:
 images:
 - index: 1
   image: '  MagicalMusketeerStarfire-DBSW-JP-SR.png'
-  illustration: '   MagicalMusketeerStarfire-LOD2-JP-VG-artwork.png'
+  illustration: '   MagicalMusketeerStarfire-MADU-JP-VG-artwork.png'
 - index: '1.1'
   image: MagicalMusketeerStarfire-DUOV-EN-UR-1E.png
-  illustration: MagicalMusketeerStarfire-LOD2-EN-VG-artwork.jpg
+  illustration: MagicalMusketeerStarfire-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: SPWA-EN019
