--- a/data/cards/44250812.yaml
+++ b/data/cards/44250812.yaml
@@ -44,7 +44,11 @@ series:
 - Gagaga
 images:
 - index: 1
+  image: '  GagagaClerk-SD42-JP-C.png    '
+  illustration: GagagaClerk-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: GagagaClerk-CBLZ-EN-SR-1E.png
+  illustration: GagagaClerk-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: CBLZ-EN008
