--- a/data/cards/55428242.yaml
+++ b/data/cards/55428242.yaml
@@ -43,7 +43,11 @@ series:
 - Traptrix
 images:
 - index: 1
+  image: '  TraptrixAtrax-SD45-JP-C.png     '
+  illustration: TraptrixAtrax-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: TraptrixAtrax-PGL2-EN-GUR-1E.png
+  illustration: TraptrixAtrax-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: JOTL-EN032
