--- a/data/cards/57782164.yaml
+++ b/data/cards/57782164.yaml
@@ -40,7 +40,11 @@ series:
 - Gagaga
 images:
 - index: 1
+  image: '  Gagagawind-LTGY-JP-C.png   '
+  illustration: Gagagawind-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: Gagagawind-MP14-EN-C-1E.png
+  illustration: Gagagawind-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: LTGY-EN057
