--- a/data/cards/59071624.yaml
+++ b/data/cards/59071624.yaml
@@ -63,7 +63,11 @@ series:
 - Traptrix
 images:
 - index: 1
+  image: '  TraptrixAllomerus-SD45-JP-NPR.png  '
+  illustration: TraptrixAllomerus-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: TraptrixAllomerus-MP21-EN-SR-1E.png
+  illustration: TraptrixAllomerus-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: ETCO-EN045
