--- a/data/cards/72710085.yaml
+++ b/data/cards/72710085.yaml
@@ -38,7 +38,11 @@ card_type: Spell
 property: Continuous
 images:
 - index: 1
+  image: '  JewelsoftheValiant-LTGY-JP-C.png   '
+  illustration: JewelsoftheValiant-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: JewelsoftheValiant-LTGY-EN-C-UE.png
+  illustration: JewelsoftheValiant-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: LTGY-EN067
