--- a/data/cards/82738277.yaml
+++ b/data/cards/82738277.yaml
@@ -43,7 +43,11 @@ series:
 - Traptrix
 images:
 - index: 1
+  image: '  TraptrixMantis-SD45-JP-SR.png  '
+  illustration: TraptrixMantis-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: TraptrixMantis-MAGO-EN-R-1E.png
+  illustration: TraptrixMantis-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: COTD-EN030
