--- a/rush.yaml
+++ b/rush.yaml
@@ -86173,7 +86173,7 @@ yugipedia_page_id: 921244
 ---
 konami_id:
 name:
-  en: The☆Dragiastar
+  en: The Dragiastar
   de:
   es:
   fr:
@@ -86220,7 +86220,7 @@ atk: 3300
 def: 2500
 materials:
   en: |-
-    "The☆Dragias" + "The☆Dragias"
+    "The Dragias" + "The Dragias"
   de:
   es:
   fr:
@@ -86231,7 +86231,7 @@ materials:
   zh-TW:
   zh-CN:
 series:
-- The☆
+- The
 images:
 - index: 1
   image: TheDragiastar-RDKP12-JP-OP.png
