--- a/data/cards/54862960.yaml
+++ b/data/cards/54862960.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 镜之御巫 迩迩
 text:
   en: |-
-    If this card is not equipped with an Equip Card, you take no battle damage from battles involving this card. If this card is equipped with an Equip Card, it cannot be destroyed by battle and your opponent takes any battle damage you would have taken from battles involving this card. During your opponent's turn, while this card is equipped with an Equip Card (Quick Effect): You can target 1 face-up monster your opponent controls; take control of it until the End Phase. You can only use this effect of "Ni-Ni the Mirror Mikanko" once per turn.
+    If this card is not equipped with an Equip Card, you take no damage from battles involving this card. If this card is equipped with an Equip Card, it cannot be destroyed by battle and your opponent takes any battle damage you would have taken from battles involving this card. During your opponent's turn, while this card is equipped with an Equip Card (Quick Effect): You can target 1 face-up monster your opponent controls; take control of it until the End Phase. You can only use this effect of "Ni-Ni the Mirror Mikanko" once per turn.
   de:
   es:
   fr:
