--- a/data/cards/18377261.yaml
+++ b/data/cards/18377261.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 剑之御巫 波礼
 text:
   en: |-
-    If this card is not equipped with an Equip Card, you take no battle damage from battles involving this card. If this card is equipped with an Equip Card, it cannot be destroyed by battle and your opponent takes any battle damage you would have taken from battles involving this card. If an Equip Card becomes equipped to this card: You can add 1 "Mikanko" Equip Spell from your Deck to your hand. You can only use this effect of "Ha-Re the Sword Mikanko" once per turn.
+    If this card is not equipped with an Equip Card, you take no damage from battles involving this card. If this card is equipped with an Equip Card, it cannot be destroyed by battle and your opponent takes any battle damage you would have taken from battles involving this card. If an Equip Card becomes equipped to this card: You can add 1 "Mikanko" Equip Spell from your Deck to your hand. You can only use this effect of "Ha-Re the Sword Mikanko" once per turn.
   de:
   es:
   fr:
