--- a/data/cards/yugipedia917925.yaml
+++ b/data/cards/yugipedia917925.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is not equipped with an Equip Card, you take no battle damage from battles involving this card. If this card is equipped with an Equip Card, it cannot be destroyed by battle and your opponent takes any battle damage you would have taken from battles involving this card. Your opponent cannot target "Mikanko" cards you control with card effects while you control an Equip Card. If an Equip Card becomes equipped to this card: You can add 1 "Mikanko" Trap from your Deck to your hand. You can only use this effect of "Fu-Ri the Orb Mikanko" once per turn.
+    If this card is not equipped with an Equip Card, you take no damage from battles involving this card. If this card is equipped with an Equip Card, it cannot be destroyed by battle and your opponent takes any battle damage you would have taken from battles involving this card. Your opponent cannot target "Mikanko" cards you control with card effects while you control an Equip Card. If an Equip Card becomes equipped to this card: You can add 1 "Mikanko" Trap from your Deck to your hand. You can only use this effect of "Fu-Ri the Orb Mikanko" once per turn.
   de:
   es:
   fr:
