--- a/data/cards/34293667.yaml
+++ b/data/cards/34293667.yaml
@@ -72,6 +72,15 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  - set_number: RC04-JP072
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: AC01-KR013
     set_name: Animation Chronicle 2021
