--- a/data/cards/44405066.yaml
+++ b/data/cards/44405066.yaml
@@ -159,6 +159,15 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Ultimate Rare
+  - set_number: RC04-JP039
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: CORE-KR054
     set_name: Clash of Rebellions
