--- a/data/cards/57314798.yaml
+++ b/data/cards/57314798.yaml
@@ -132,6 +132,15 @@ sets:
     set_name: Number Complete File -Piece of Memories-
     rarities:
     - Ultra Rare
+  - set_number: RC04-JP040
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: CPF1-KR021
     set_name: 'Collectors Pack: Duelist of Flash Version'
