--- a/data/cards/73539069.yaml
+++ b/data/cards/73539069.yaml
@@ -126,6 +126,15 @@ sets:
     set_name: Premium Pack 2021
     rarities:
     - Secret Rare
+  - set_number: RC04-JP047
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: PP14-KRB32
     set_name: Premium Pack Vol.14 2nd Wave
