--- a/data/cards/77075360.yaml
+++ b/data/cards/77075360.yaml
@@ -105,6 +105,15 @@ sets:
     set_name: 20th Anniversary Duelist Box
     rarities:
     - Ultra Rare
+  - set_number: RC04-JP033
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: CHBI-KRB14
     set_name: Chronicle Binder
