--- a/data/cards/32807846.yaml
+++ b/data/cards/32807846.yaml
@@ -39,6 +39,9 @@ property: Normal
 images:
 - index: 1
   image: ReinforcementoftheArmy-MAMA-EN-URPR-1E.png
+  illustration: ReinforcementoftheArmy-MADU-EN-VG-artwork.png
+- index: 2
+  image: ReinforcementoftheArmy-PPC2-JP-OP.png
 sets:
   en:
   - set_number: LOD-EN028
