--- a/data/cards/42166000.yaml
+++ b/data/cards/42166000.yaml
@@ -89,6 +89,15 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: RC04-JP030
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: DP24-KR001
     set_name: 'Duelist Pack: Duelists of Gloom'
