--- a/data/cards/84815190.yaml
+++ b/data/cards/84815190.yaml
@@ -101,6 +101,15 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: RC04-JP035
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: DP25-KR023
     set_name: 'Duelist Pack: Duelists of Whirlwind'
