--- a/data/cards/87639778.yaml
+++ b/data/cards/87639778.yaml
@@ -116,6 +116,15 @@ sets:
     rarities:
     - Common
     - Super Rare
+  - set_number: RC04-JP074
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: 20AP-KR004
     set_name: 20th Anniversary Pack 1st Wave
