--- a/data/cards/95477924.yaml
+++ b/data/cards/95477924.yaml
@@ -70,6 +70,15 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: RC04-JP069
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: WPP2-KR062
     set_name: World Premiere Pack 2021
