--- a/data/cards/58477767.yaml
+++ b/data/cards/58477767.yaml
@@ -37,7 +37,11 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
+  image: '  QueensPawn-DREV-JP-C.jpg   '
+  illustration: QueensPawn-TF05-JP-VG.png
+- index: '1.1'
   image: QueensPawn-DREV-EN-C-1E.jpg
+  illustration: QueensPawn-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DREV-EN073
