--- a/data/cards/71209500.yaml
+++ b/data/cards/71209500.yaml
@@ -43,7 +43,11 @@ series:
 - Amazoness
 images:
 - index: 1
+  image: '  AmazonessScouts-EXP4-JP-C.jpg   '
+  illustration: AmazonessScouts-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: AmazonessScouts-LCJW-EN-C-1E.png
+  illustration: AmazonessScouts-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DREV-EN081
