--- a/data/cards/97870394.yaml
+++ b/data/cards/97870394.yaml
@@ -43,6 +43,9 @@ series:
 - Amazoness
 images:
 - index: 1
+  image: '  AmazonessSpiritualist-DP27-JP-SR.png  '
+  illustration: AmazonessSpiritualist-OW.png
+- index: '1.1'
   image: AmazonessSpiritualist-DABL-EN-C-1E.png
 sets:
   en:
