--- a/data/cards/04591250.yaml
+++ b/data/cards/04591250.yaml
@@ -53,7 +53,11 @@ series:
 - Amazoness
 images:
 - index: 1
+  image: '  AmazonessEmpress-DP27-JP-C.png   '
+  illustration: AmazonessEmpress-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: AmazonessEmpress-MP18-EN-C-1E.png
+  illustration: AmazonessEmpress-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: CIBR-EN095
