--- a/data/cards/11827244.yaml
+++ b/data/cards/11827244.yaml
@@ -92,6 +92,15 @@ sets:
     set_name: The Valuable Book 20 promotional cards
     rarities:
     - Ultra Rare
+  - set_number: RC04-JP059
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: PP13-KR048
     set_name: Premium Pack Vol.13
