--- a/data/cards/31102447.yaml
+++ b/data/cards/31102447.yaml
@@ -43,7 +43,11 @@ series:
 - Amazoness
 images:
 - index: 1
+  image: '  AmazonessSpy-DP27-JP-C.png   '
+  illustration: AmazonessSpy-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: AmazonessSpy-SBLS-EN-C-1E.png
+  illustration: AmazonessSpy-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: CIBR-EN093
