--- a/data/cards/34755994.yaml
+++ b/data/cards/34755994.yaml
@@ -110,6 +110,15 @@ sets:
     set_name: 'Deck Build Pack: Genesis Impactors'
     rarities:
     - Super Rare
+  - set_number: RC04-JP050
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: DBGI-KR008
     set_name: 'Deck Build Pack: Genesis Impactors'
