--- a/data/cards/47325505.yaml
+++ b/data/cards/47325505.yaml
@@ -200,6 +200,15 @@ sets:
     set_name: Tournament Pack 2021 Vol.4
     rarities:
     - Common
+  - set_number: RC04-JP054
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: ANPR-KR062
     set_name: Ancient Prophecy
