--- a/data/cards/50486289.yaml
+++ b/data/cards/50486289.yaml
@@ -43,6 +43,8 @@ series:
 - Amazoness
 images:
 - index: 1
+  image: '  AmazonessWarChief-DP27-JP-SR.png'
+- index: '1.1'
   image: AmazonessWarChief-DABL-EN-C-1E.png
 sets:
   en:
