--- a/data/cards/53334641.yaml
+++ b/data/cards/53334641.yaml
@@ -108,6 +108,15 @@ sets:
     set_name: The New Challengers
     rarities:
     - Super Rare
+  - set_number: RC04-JP037
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: EP15-KR054
     set_name: Extra Pack 2015
