--- a/data/cards/73642296.yaml
+++ b/data/cards/73642296.yaml
@@ -254,6 +254,15 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystals'
     rarities:
     - Common
+  - set_number: RC04-JP012
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: FLOD-KR033
     set_name: Flames of Destruction
