--- a/data/cards/83407038.yaml
+++ b/data/cards/83407038.yaml
@@ -39,7 +39,11 @@ series:
 - Amazoness
 images:
 - index: 1
+  image: '  AmazonessOnslaught-DP18-JP-R.png   '
+  illustration: AmazonessOnslaught-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: AmazonessOnslaught-LDS1-EN-C-1E.png
+  illustration: AmazonessOnslaught-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: LEDU-EN011
