--- a/data/cards/86758746.yaml
+++ b/data/cards/86758746.yaml
@@ -39,6 +39,9 @@ series:
 - Amazoness
 images:
 - index: 1
+  image: '  AmazonessSecretArts-DP27-JP-R.png   '
+  illustration: AmazonessSecretArts-OW.png
+- index: '1.1'
   image: AmazonessSecretArts-DABL-EN-C-1E.png
 sets:
   en:
