--- a/data/cards/93854893.yaml
+++ b/data/cards/93854893.yaml
@@ -139,6 +139,15 @@ sets:
     - Secret Rare
     - 20th Secret Rare
     - Ultimate Rare
+  - set_number: RC04-JP041
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: DANE-KR038
     set_name: Dark Neostorm
