--- a/data/cards/94192409.yaml
+++ b/data/cards/94192409.yaml
@@ -536,6 +536,15 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  - set_number: RC04-JP070
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: SD2-KR028
     set_name: 'Structure Deck: Zombie Madness'
