--- a/rush.yaml
+++ b/rush.yaml
@@ -53502,7 +53502,7 @@ yugipedia_page_id: 848179
 ---
 konami_id: 17282
 name:
-  en: Jellyplug
+  en: Pluggyfish
   de:
   es:
   fr:
@@ -53536,7 +53536,7 @@ atk: 900
 def: 900
 images:
 - index: 1
-  image: Jellyplug-RDKP08-JP-C.png
+  image: Pluggyfish-RDKP08-JP-C.png
 sets:
   ja:
   - set_number: RD/KP08-JP006
@@ -53552,7 +53552,7 @@ yugipedia_page_id: 845723
 ---
 konami_id: 17283
 name:
-  en: Anglercoil
+  en: Lanterncoilfish
   de:
   es:
   fr:
@@ -53586,7 +53586,7 @@ atk: 1500
 def: 0
 images:
 - index: 1
-  image: Anglercoil-RDKP08-JP-R.png
+  image: Lanterncoilfish-RDKP08-JP-R.png
 sets:
   ja:
   - set_number: RD/KP08-JP007
@@ -54690,7 +54690,7 @@ yugipedia_page_id: 846644
 ---
 konami_id: 17301
 name:
-  en: Zapzap Octospark
+  en: Zap Zap Octospark
   de:
   es:
   fr:
@@ -54738,7 +54738,7 @@ atk: 1600
 def: 800
 images:
 - index: 1
-  image: ZapzapOctospark-RDKP08-JP-C.png
+  image: ZapZapOctospark-RDKP08-JP-C.png
 sets:
   ja:
   - set_number: RD/KP08-JP025
@@ -55846,7 +55846,7 @@ atk: 2600
 def: 1800
 materials:
   en: |-
-    "Anglercoil" + "Jellyplug"
+    "Lanterncoilfish" + "Pluggyfish"
   de:
   es:
   fr:
@@ -55876,7 +55876,7 @@ yugipedia_page_id: 845722
 ---
 konami_id: 17317
 name:
-  en: Showering Infergyo
+  en: Showering Seaferno
   de:
   es:
   fr:
@@ -55904,7 +55904,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 "Zapzap Octospark" from your Graveyard to your hand. Then, inflict 800 damage to your opponent. Then, if your opponent has a face-up Level 8 monster on their field, this turn, this card gains 800 ATK and all face-up Level 8 monsters on your opponent's field lose 800 ATK.
+    Add 1 "Zap Zap Octospark" from your Graveyard to your hand. Then, inflict 800 damage to your opponent. Then, if your opponent has a face-up Level 8 monster on their field, this turn, this card gains 800 ATK and all face-up Level 8 monsters on your opponent's field lose 800 ATK.
   de:
   es:
   fr:
@@ -55924,7 +55924,7 @@ atk: 2800
 def: 2400
 materials:
   en: |-
-    "Zapzap Octospark" + "Jellyplug"
+    "Zap Zap Octospark" + "Pluggyfish"
   de:
   es:
   fr:
@@ -55938,7 +55938,7 @@ materials:
   zh-CN:
 images:
 - index: 1
-  image: ShoweringInfergyo-RDKP08-JP-C.png
+  image: ShoweringSeaferno-RDKP08-JP-C.png
 sets:
   ja:
   - set_number: RD/KP08-JP041
