--- a/data/cards/12580477.yaml
+++ b/data/cards/12580477.yaml
@@ -300,7 +300,7 @@ sets:
   - set_number: DL2-034
     set_name: Duelist Legacy Volume.2
     rarities:
-    - Rare
+    - Super Rare
   - set_number: BE1-JP114
     set_name: Beginner's Edition 1
     rarities:
