--- a/data/cards/yugipedia929623.yaml
+++ b/data/cards/yugipedia929623.yaml
@@ -31,6 +31,9 @@ attribute: WIND
 level: 9
 atk: 2800
 def: 1000
+images:
+- index: 1
+  image: FullActiveDuprex-CYAC-JP-C.png
 sets:
   ja:
   - set_number: CYAC-JP025
